--- a/plugins/administrator/locale/ar/webyast-root-user.po
+++ b/plugins/administrator/locale/ar/webyast-root-user.po
@@ -1,95 +1,82 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
-#
+# Mohammad Alhargan <malham1@hotmail.com>, 2012.
+# mohammad <malham1@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: yast_webclient_administrator\n"
-"POT-Creation-Date: 2010-04-13 13:36+0200\n"
-"PO-Revision-Date: 2010-04-22 11:47\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: @PACKAGE@\n"
+"Report-Msgid-Bugs-To: translation@suse.de\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-08-09 01:37+0300\n"
+"Last-Translator: mohammad <malham1@gmail.com>\n"
+"Language-Team: http://www.vertaal.com.ar/files/factory/ar/list/\n"
+"Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
+"X-Generator: Virtaal 0.7.1\n"
 
-#: app/controllers/administrator_controller.rb:32 app/views/administrator/index.html.erb:24
-msgid "Enter a valid e-mail address."
-msgstr "أدخل عنوان بريد إلكتروني صالحًا."
+msgid "A password is required."
+msgstr "كلمة المرور مطلوبة."
 
-#: app/controllers/administrator_controller.rb:40
-msgid "Passwords do not match."
-msgstr "كلمتا السر غير متطابقتين."
-
-#: app/controllers/administrator_controller.rb:53
-msgid "Administrator settings have been written."
-msgstr "تمت كتابة إعدادات المسؤول."
-
-#: app/controllers/administrator_controller.rb:63
-msgid "Error while saving administrator settings: %s"
-msgstr "حدث خطأ أثناء حفظ إعدادات المسؤول: %s"
-
-#: app/controllers/administrator_controller.rb:75
-msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
-msgstr "تم تعيين اسم مستعار للبريد لكن لم يتم تكوين خادم البريد الصادر (%s<i>تغيير</i>%s)."
-
-#: app/views/administrator/index.html.erb:1
 msgid "Administrator Settings"
 msgstr "إعدادات المسؤول"
 
-#: app/views/administrator/index.html.erb:32
-msgid "The passwords do not match."
-msgstr "كلمتا السر غير متطابقتين."
+msgid "Administrator settings have been written."
+msgstr "تمت كتابة إعدادات المسؤول."
 
-#: app/views/administrator/index.html.erb:33
-msgid "A password is required."
-msgstr "كلمة السر مطلوبة."
-
-#: app/views/administrator/index.html.erb:38
-msgid "Password Strength:"
-msgstr "قوة كلمة السر:"
-
-#: app/views/administrator/index.html.erb:40
-msgid "Weak"
-msgstr "وايك"
-
-#: app/views/administrator/index.html.erb:41
-msgid "Normal"
-msgstr "عادي"
-
-#: app/views/administrator/index.html.erb:42
-msgid "Medium"
-msgstr "متوسط"
-
-#: app/views/administrator/index.html.erb:43
-msgid "Strong"
-msgstr "الأغنية"
-
-#: app/views/administrator/index.html.erb:44
-msgid "Very Strong"
-msgstr "قوي جدًا"
-
-#: app/views/administrator/index.html.erb:63
-msgid "Password Setup for User 'root'"
-msgstr "إعداد كلمة سر للمستخدم 'المسؤول'"
-
-#: app/views/administrator/index.html.erb:64
-msgid "New Password"
-msgstr "كلمة السر الجديدة"
-
-#: app/views/administrator/index.html.erb:69
 msgid "Confirm Password"
-msgstr "تأكيد كلمة السر"
+msgstr "تأكيد كلمة المرور"
 
-#: app/views/administrator/index.html.erb:76
-msgid "Mail Setup for User 'root'"
-msgstr "إعداد بريد للمستخدم 'المسؤول'"
+msgid "Enter a valid e-mail address."
+msgstr "أدخل عنوان بريد إلكتروني صالح."
 
-#: app/views/administrator/index.html.erb:78
+msgid "Error while saving administrator settings."
+msgstr "حدث خطأ أثناء حفظ إعدادات المسؤول."
+
 msgid "Forward system mail to"
 msgstr "إعادة توجيه بريد النظام إلى"
 
-#: app/views/administrator/index.html.erb:81
-msgid "Save Mail Only"
-msgstr "حفظ البريد"
+msgid "Mail Setup for User 'root'"
+msgstr "إعداد البريد للمستخدم 'الجذر'"
 
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr "تم تعيين اسم مستعار للبريد ولكن لم يتم إعداد خادم البريد الصادر (%s<i>تغيير</i>%s)."
+
+msgid "New Password"
+msgstr "كلمة المرور الجديدة"
+
+msgid "Password Setup for User 'root'"
+msgstr "إعداد كلمة المرور للمستخدم 'الجذر'"
+
+msgid "Passwords do not match."
+msgstr "كلمتا المرور غير متطابقين."
+
+msgid "Please wait"
+msgstr "فضلاً انتظر"
+
+msgid "Save Mail Only"
+msgstr "حفظ البريد فقط"
+
+msgid "The passwords do not match."
+msgstr "كلمتا المرور غير متطابقين."
+
+#~ msgid "Password Strength:"
+#~ msgstr "قوة كلمة المرور:"
+
+#~ msgid "Weak"
+#~ msgstr "ضعيفة"
+
+#~ msgid "Normal"
+#~ msgstr "عادية"
+
+#~ msgid "Medium"
+#~ msgstr "متوسطة"
+
+#~ msgid "Strong"
+#~ msgstr "قوية"
+
+#~ msgid "Very Strong"
+#~ msgstr "قوية جداً"
+
+#~ msgid "Manage system administrator"
+#~ msgstr "إدارة مسؤول النظام"
