--- a/plugins/administrator/locale/bg/webyast-root-user.po
+++ b/plugins/administrator/locale/bg/webyast-root-user.po
@@ -1,133 +1,91 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
 "PO-Revision-Date: 2005-08-18 21:16+0300\n"
 "Last-Translator: Borislav Mitev <morbid_viper@tkzs.org>\n"
 "Language-Team: Bulgarian <bg@li.org>\n"
+"Language: bg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#, fuzzy
-msgid "Enter a valid e-mail address."
-msgstr "Това не е валиден CCW адрес."
-
-#: app/controllers/administrator_controller.rb:61
-#: app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "Паролите не съответстват."
-
-#: app/controllers/administrator_controller.rb:74
-#: app/controllers/administrator_controller.rb:74
-#, fuzzy
-msgid "Administrator settings have been written."
-msgstr "Настройки на монитора"
-
-#: app/controllers/administrator_controller.rb:84
-#: app/controllers/administrator_controller.rb:84
-#, fuzzy
-msgid "Error while saving administrator settings: %s"
-msgstr "Възникнала е грешка при затварянето на стария shadow файл: %m"
-
-#: app/controllers/administrator_controller.rb:96
-#: app/controllers/administrator_controller.rb:96
-msgid ""
-"Mail alias was set but outgoing mail server is not configured (%s<i>change</"
-"i>%s)."
-msgstr ""
-
-#: app/views/administrator/index.html.erb:22
-#: app/views/administrator/index.html.erb:22 shortcuts.yml:6
-#, fuzzy
-msgid "Administrator Settings"
-msgstr "Настройки на монитора"
-
-#: app/views/administrator/index.html.erb:64
-#: app/views/administrator/index.html.erb:64
-#, fuzzy
-msgid "The passwords do not match."
-msgstr "Паролите не съответстват."
-
-#: app/views/administrator/index.html.erb:65
-#: app/views/administrator/index.html.erb:65
 msgid "A password is required."
 msgstr ""
 
-#: app/views/administrator/index.html.erb:70
-#: app/views/administrator/index.html.erb:70
 #, fuzzy
-msgid "Password Strength:"
-msgstr "Парола:"
+#| msgid "Monitor Settings"
+msgid "Administrator Settings"
+msgstr "Настройки на монитора"
 
-#: app/views/administrator/index.html.erb:72
-#: app/views/administrator/index.html.erb:72
-msgid "Weak"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:73
-#: app/views/administrator/index.html.erb:73
-msgid "Normal"
-msgstr "Нормална"
-
-#: app/views/administrator/index.html.erb:74
-#: app/views/administrator/index.html.erb:74
-msgid "Medium"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:75
-#: app/views/administrator/index.html.erb:75
-msgid "Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:76
-#: app/views/administrator/index.html.erb:76
-msgid "Very Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:104
-#: app/views/administrator/index.html.erb:104
-msgid "Password Setup for User 'root'"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:105
-#: app/views/administrator/index.html.erb:105
 #, fuzzy
-msgid "New Password"
-msgstr "Нова парола:"
+#| msgid "Monitor Settings"
+msgid "Administrator settings have been written."
+msgstr "Настройки на монитора"
 
 # password dialog title
-#: app/views/administrator/index.html.erb:110
-#: app/views/administrator/index.html.erb:110
 #, fuzzy
+#| msgid "Password"
 msgid "Confirm Password"
 msgstr "Парола"
 
-#: app/views/administrator/index.html.erb:119
-#: app/views/administrator/index.html.erb:119
-msgid "Mail Setup for User 'root'"
-msgstr ""
+#, fuzzy
+#| msgid "This is not a valid CCW address."
+msgid "Enter a valid e-mail address."
+msgstr "Това не е валиден CCW адрес."
 
-#: app/views/administrator/index.html.erb:121
-#: app/views/administrator/index.html.erb:121
+#, fuzzy
+#| msgid "Error while closing old shadow file: %m"
+msgid "Error while saving administrator settings."
+msgstr "Възникнала е грешка при затварянето на стария shadow файл: %m"
+
 msgid "Forward system mail to"
 msgstr ""
 
-#: app/views/administrator/index.html.erb:124
-#: app/views/administrator/index.html.erb:124
+msgid "Mail Setup for User 'root'"
+msgstr ""
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr ""
+
 #, fuzzy
+#| msgid "New Password: "
+msgid "New Password"
+msgstr "Нова парола:"
+
+msgid "Password Setup for User 'root'"
+msgstr ""
+
+msgid "Passwords do not match."
+msgstr "Паролите не съответстват."
+
+msgid "Please wait"
+msgstr ""
+
+#, fuzzy
+#| msgid "&Save"
 msgid "Save Mail Only"
 msgstr "&Запис..."
 
-#: shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr ""
+#, fuzzy
+#| msgid "Passwords do not match."
+msgid "The passwords do not match."
+msgstr "Паролите не съответстват."
+
+#, fuzzy
+#~| msgid "Password:"
+#~ msgid "Password Strength:"
+#~ msgstr "Парола:"
+
+#~ msgid "Normal"
+#~ msgstr "Нормална"
+
+#, fuzzy
+#~| msgid "YaST System Administration"
+#~ msgid "Manage system administrator"
+#~ msgstr "YaST системно администриране"
 
 # password dialog title
 #~ msgid "Password"
