--- a/plugins/administrator/locale/ca/webyast-root-user.po
+++ b/plugins/administrator/locale/ca/webyast-root-user.po
@@ -6,12 +6,13 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui 1.0.0\n"
+"Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
 "PO-Revision-Date: 2002-02-08 15:47+0100\n"
 "Last-Translator: Jordi Bruguera i Cortada <jordi@grn.es>\n"
 "Language-Team: Catalan\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,113 +21,75 @@ msgstr ""
 "#-#-#-#-#  isns.ca.po (YaST (@memory@))  #-#-#-#-#\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-msgid "Enter a valid e-mail address."
-msgstr "Introduïu una adreça de correu electrònic vàlida."
-
-#: app/controllers/administrator_controller.rb:61
-#: app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "Les contrasenyes no coincideixen."
-
-#: app/controllers/administrator_controller.rb:74
-#: app/controllers/administrator_controller.rb:74
-msgid "Administrator settings have been written."
-msgstr "S'han escrit els paràmetres d'dministració"
-
-#: app/controllers/administrator_controller.rb:84
-#: app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr "S'ha produït un error en desar els paràmetres d'administració: %s"
-
-#: app/controllers/administrator_controller.rb:96
-#: app/controllers/administrator_controller.rb:96
-msgid ""
-"Mail alias was set but outgoing mail server is not configured (%s<i>change</"
-"i>%s)."
-msgstr ""
-"L'àlies de correu ha estat definit però no s'ha configurat el servidor de "
-"correpo de sortida (%s<i>canvia</i>%s)."
-
-#: app/views/administrator/index.html.erb:22
-#: app/views/administrator/index.html.erb:22 shortcuts.yml:6
-msgid "Administrator Settings"
-msgstr "Paràmetres d'administració"
-
-#: app/views/administrator/index.html.erb:64
-#: app/views/administrator/index.html.erb:64
-msgid "The passwords do not match."
-msgstr "Les contrasenyes no coincideixen."
-
-#: app/views/administrator/index.html.erb:65
-#: app/views/administrator/index.html.erb:65
 msgid "A password is required."
 msgstr "La contrasenya és obligatòria"
 
-#: app/views/administrator/index.html.erb:70
-#: app/views/administrator/index.html.erb:70
-msgid "Password Strength:"
-msgstr "Fortalesa de la contrasenya"
+msgid "Administrator Settings"
+msgstr "Paràmetres d'administració"
 
-#: app/views/administrator/index.html.erb:72
-#: app/views/administrator/index.html.erb:72
-msgid "Weak"
-msgstr "Fluixa"
+msgid "Administrator settings have been written."
+msgstr "S'han escrit els paràmetres d'dministració"
 
-#: app/views/administrator/index.html.erb:73
-#: app/views/administrator/index.html.erb:73
-msgid "Normal"
-msgstr "Normal"
-
-#: app/views/administrator/index.html.erb:74
-#: app/views/administrator/index.html.erb:74
-msgid "Medium"
-msgstr "Mitjana"
-
-# TO
-#: app/views/administrator/index.html.erb:75
-#: app/views/administrator/index.html.erb:75
-msgid "Strong"
-msgstr "Forta"
-
-#: app/views/administrator/index.html.erb:76
-#: app/views/administrator/index.html.erb:76
-msgid "Very Strong"
-msgstr "Molt forta"
-
-#: app/views/administrator/index.html.erb:104
-#: app/views/administrator/index.html.erb:104
-msgid "Password Setup for User 'root'"
-msgstr "Contrasenya de l'usuari primari"
-
-#: app/views/administrator/index.html.erb:105
-#: app/views/administrator/index.html.erb:105
-msgid "New Password"
-msgstr "Nova contrasenya"
-
-#: app/views/administrator/index.html.erb:110
-#: app/views/administrator/index.html.erb:110
 msgid "Confirm Password"
 msgstr "Confirmeu la contrasenya"
 
-#: app/views/administrator/index.html.erb:119
-#: app/views/administrator/index.html.erb:119
-msgid "Mail Setup for User 'root'"
-msgstr "Paràmetres de correu per a l'usuari primari"
+msgid "Enter a valid e-mail address."
+msgstr "Introduïu una adreça de correu electrònic vàlida."
 
-#: app/views/administrator/index.html.erb:121
-#: app/views/administrator/index.html.erb:121
+#, fuzzy
+#| msgid "Error while saving administrator settings: %s"
+msgid "Error while saving administrator settings."
+msgstr "S'ha produït un error en desar els paràmetres d'administració: %s"
+
 msgid "Forward system mail to"
 msgstr "Reenvia el correu del sistema a"
 
-#: app/views/administrator/index.html.erb:124
-#: app/views/administrator/index.html.erb:124
+msgid "Mail Setup for User 'root'"
+msgstr "Paràmetres de correu per a l'usuari primari"
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr "L'àlies de correu ha estat definit però no s'ha configurat el servidor de correpo de sortida (%s<i>canvia</i>%s)."
+
+msgid "New Password"
+msgstr "Nova contrasenya"
+
+msgid "Password Setup for User 'root'"
+msgstr "Contrasenya de l'usuari primari"
+
+msgid "Passwords do not match."
+msgstr "Les contrasenyes no coincideixen."
+
+#, fuzzy
+#| msgid "Please wait..."
+msgid "Please wait"
+msgstr "Espereu, si us plau..."
+
 msgid "Save Mail Only"
 msgstr "Només desa el correu"
 
-#: shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr ""
+msgid "The passwords do not match."
+msgstr "Les contrasenyes no coincideixen."
+
+#~ msgid "Password Strength:"
+#~ msgstr "Fortalesa de la contrasenya"
+
+#~ msgid "Weak"
+#~ msgstr "Fluixa"
+
+#~ msgid "Normal"
+#~ msgstr "Normal"
+
+#~ msgid "Medium"
+#~ msgstr "Mitjana"
+
+# TO
+#~ msgid "Strong"
+#~ msgstr "Forta"
+
+#~ msgid "Very Strong"
+#~ msgstr "Molt forta"
+
+#, fuzzy
+#~| msgid "Standby disabled by administrator."
+#~ msgid "Manage system administrator"
+#~ msgstr "L'administrador ha inhabilitat el mode d'espera."
