--- a/plugins/administrator/locale/el/webyast-root-user.po
+++ b/plugins/administrator/locale/el/webyast-root-user.po
@@ -1,135 +1,86 @@
+#
+# Efstathios Iosifidis <iosifidis@opensuse.org>, 2012.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
-"PO-Revision-Date: 2005-08-24 17:53+0300\n"
-"Last-Translator: Hellenic SuSE Translation Team <hstg@billg.gr>\n"
-"Language-Team: Hellenic-Ελληνικά-Greek <hstg@billg.gr>\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-06-14 18:29+0300\n"
+"Last-Translator: Efstathios Iosifidis <iosifidis@opensuse.org>\n"
+"Language-Team: Ελληνικά, Σύγχρονα <opensuse-translation-el@opensuse.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bits\n"
 "X-Generator: KBabel 1.10\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#, fuzzy
+msgid "A password is required."
+msgstr "Απαιτείται συνθηματικό."
+
+msgid "Administrator Settings"
+msgstr "Ρυθμίσεις Διαχειριστή"
+
+msgid "Administrator settings have been written."
+msgstr "Οι ρυθμίσεις του διαχειριστή έχουν καταχωρηθεί."
+
+msgid "Confirm Password"
+msgstr "Επιβεβαίωση Συνθηματικού"
+
 msgid "Enter a valid e-mail address."
-msgstr "Το '%s' δεν είναι έγκυρη διεύθυνση ip."
+msgstr "Εισαγωγή έγκυρης διεύθυνσης αλληλογραφίας."
 
-#: app/controllers/administrator_controller.rb:61
-#: app/controllers/administrator_controller.rb:61
+msgid "Error while saving administrator settings."
+msgstr "Σφάλμα κατά την αποθήκευση ρυθμίσεων διαχειριστή."
+
+msgid "Forward system mail to"
+msgstr "Προώθηση αλληλογραφίας συστήματος στο"
+
+msgid "Mail Setup for User 'root'"
+msgstr "Ρύθμιση αλληλογραφίας για τον χρήστη 'root'"
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr "Τα ψευδώνυμα αλληλογραφίας έχουν οριστεί αλλά ο εξυπηρετητής εξερχόμενης αλληλογραφίας δεν έχει ρυθμιστεί (%s<i>αλλαγή</i>%s)."
+
+msgid "New Password"
+msgstr "Νέο Συνθηματικό"
+
+msgid "Password Setup for User 'root'"
+msgstr "Ρύθμιση Συνθηματικού για τον χρήστη 'root'"
+
 msgid "Passwords do not match."
 msgstr "Τα συνθηματικά δεν ταιριάζουν."
 
-#: app/controllers/administrator_controller.rb:74
-#: app/controllers/administrator_controller.rb:74
-#, fuzzy
-msgid "Administrator settings have been written."
-msgstr "Ρυθμίσεις οθόνης"
+msgid "Please wait"
+msgstr "Παρακαλώ περιμένετε"
 
-#: app/controllers/administrator_controller.rb:84
-#: app/controllers/administrator_controller.rb:84
-#, fuzzy
-msgid "Error while saving administrator settings: %s"
-msgstr "Σφάλμα κατα το κλεισιμο του παλαιού αρχείου shadow file: %m"
+msgid "Save Mail Only"
+msgstr "Αποθήκευση Αλληλογραφίας Μόνο"
 
-#: app/controllers/administrator_controller.rb:96
-#: app/controllers/administrator_controller.rb:96
-msgid ""
-"Mail alias was set but outgoing mail server is not configured (%s<i>change</"
-"i>%s)."
-msgstr ""
-
-#: app/views/administrator/index.html.erb:22
-#: app/views/administrator/index.html.erb:22 shortcuts.yml:6
-#, fuzzy
-msgid "Administrator Settings"
-msgstr "Ρυθμίσεις οθόνης"
-
-#: app/views/administrator/index.html.erb:64
-#: app/views/administrator/index.html.erb:64
-#, fuzzy
 msgid "The passwords do not match."
 msgstr "Τα συνθηματικά δεν ταιριάζουν."
 
-#: app/views/administrator/index.html.erb:65
-#: app/views/administrator/index.html.erb:65
-#, fuzzy
-msgid "A password is required."
-msgstr "Απαιτείται το συνθηματικό PKCS12."
+#~ msgid "Password Strength:"
+#~ msgstr "Ισχύς Συνθηματικού:"
 
-#: app/views/administrator/index.html.erb:70
-#: app/views/administrator/index.html.erb:70
-#, fuzzy
-msgid "Password Strength:"
-msgstr "Τα συνθηματικά ταιριάζουν"
+#~ msgid "Weak"
+#~ msgstr "Ασθενές"
 
-#: app/views/administrator/index.html.erb:72
-#: app/views/administrator/index.html.erb:72
-msgid "Weak"
-msgstr ""
+#~ msgid "Normal"
+#~ msgstr "Κανονικό"
 
-#: app/views/administrator/index.html.erb:73
-#: app/views/administrator/index.html.erb:73
-msgid "Normal"
-msgstr "Κανονικό"
+#~ msgid "Medium"
+#~ msgstr "Μεσαίο"
 
-#: app/views/administrator/index.html.erb:74
-#: app/views/administrator/index.html.erb:74
-#, fuzzy
-msgid "Medium"
-msgstr "Μέσα"
+#~ msgid "Strong"
+#~ msgstr "Δυνατό"
 
-#: app/views/administrator/index.html.erb:75
-#: app/views/administrator/index.html.erb:75
-msgid "Strong"
-msgstr ""
+#~ msgid "Very Strong"
+#~ msgstr "Πολύ Δυνατό"
 
-#: app/views/administrator/index.html.erb:76
-#: app/views/administrator/index.html.erb:76
-msgid "Very Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:104
-#: app/views/administrator/index.html.erb:104
-msgid "Password Setup for User 'root'"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:105
-#: app/views/administrator/index.html.erb:105
-#, fuzzy
-msgid "New Password"
-msgstr "Νέο Συνθηματικό:"
-
-#: app/views/administrator/index.html.erb:110
-#: app/views/administrator/index.html.erb:110
-#, fuzzy
-msgid "Confirm Password"
-msgstr "Αλλαγή Συνθηματικού"
-
-#: app/views/administrator/index.html.erb:119
-#: app/views/administrator/index.html.erb:119
-msgid "Mail Setup for User 'root'"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:121
-#: app/views/administrator/index.html.erb:121
-msgid "Forward system mail to"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:124
-#: app/views/administrator/index.html.erb:124
-#, fuzzy
-msgid "Save Mail Only"
-msgstr "&Αποθήκευση"
-
-#: shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr ""
+#~ msgid "Manage system administrator"
+#~ msgstr "Διαχείριση Συστήματος"
 
 # password dialog title
 #~ msgid "Password"
