--- a/plugins/administrator/locale/en_GB/webyast-root-user.po
+++ b/plugins/administrator/locale/en_GB/webyast-root-user.po
@@ -2,79 +2,106 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: translation@suse.de\n"
-"POT-Creation-Date: 2009-11-20 14:34+0100\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
 "PO-Revision-Date: 2001-07-17 16:27+0200\n"
 "Last-Translator: James Ogley <ogley@suse.co.uk>\n"
 "Language-Team: English <i18n@suse.de>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
-#: app/controllers/administrator_controller.rb:35
-#: app/views/administrator/index.html.erb:28
 #, fuzzy
-#| msgid "`%s' is not a valid ip address."
-msgid "Enter a valid e-mail address."
-msgstr "`%s' is not a valid ip address."
+#| msgid "The PKCS12 password is required."
+msgid "A password is required."
+msgstr "The PKCS12 password is required."
 
-#: app/controllers/administrator_controller.rb:43
-msgid "Passwords do not match."
-msgstr "Passwords do not match."
-
-#: app/controllers/administrator_controller.rb:60
-#, fuzzy
-#| msgid "Monitor Settings"
-msgid "Administrator settings have been written."
-msgstr "Monitor Settings"
-
-#: app/controllers/administrator_controller.rb:70
-#, fuzzy
-#| msgid "Error while closing old shadow file: %m"
-msgid "Error while saving administrator settings: %s"
-msgstr "Error while closing old shadow file: %m"
-
-#: app/views/administrator/index.html.erb:1
 #, fuzzy
 #| msgid "Monitor Settings"
 msgid "Administrator Settings"
 msgstr "Monitor Settings"
 
-#: app/views/administrator/index.html.erb:36
+#, fuzzy
+#| msgid "Monitor Settings"
+msgid "Administrator settings have been written."
+msgstr "Monitor Settings"
+
+# password dialog title
+#, fuzzy
+#| msgid "Password"
+msgid "Confirm Password"
+msgstr "Password"
+
+#, fuzzy
+#| msgid "`%s' is not a valid ip address."
+msgid "Enter a valid e-mail address."
+msgstr "`%s' is not a valid ip address."
+
+#, fuzzy
+#| msgid "Error while closing old shadow file: %m"
+msgid "Error while saving administrator settings."
+msgstr "Error while closing old shadow file: %m"
+
+msgid "Forward system mail to"
+msgstr ""
+
+msgid "Mail Setup for User 'root'"
+msgstr ""
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr ""
+
+#, fuzzy
+#| msgid "New Password: "
+msgid "New Password"
+msgstr "New Password: "
+
+msgid "Password Setup for User 'root'"
+msgstr ""
+
+msgid "Passwords do not match."
+msgstr "Passwords do not match."
+
+#, fuzzy
+#| msgid "Please wait..."
+msgid "Please wait"
+msgstr "Please wait..."
+
+#, fuzzy
+#| msgid "Save"
+msgid "Save Mail Only"
+msgstr "Save"
+
 #, fuzzy
 #| msgid "Passwords do not match."
 msgid "The passwords do not match."
 msgstr "Passwords do not match."
 
-#: app/views/administrator/index.html.erb:51
-msgid "Here, configure the settings for system administrator ('root')."
-msgstr ""
+#, fuzzy
+#~| msgid "Password:"
+#~ msgid "Password Strength:"
+#~ msgstr "Password:"
+
+#~ msgid "Normal"
+#~ msgstr "Normal"
+
+#, fuzzy
+#~| msgid "Media"
+#~ msgid "Medium"
+#~ msgstr "Media"
+
+#, fuzzy
+#~| msgid "YaST System Administration"
+#~ msgid "Manage system administrator"
+#~ msgstr "YaST System Administration"
 
 # password dialog title
-#: app/views/administrator/index.html.erb:58
-msgid "Password"
-msgstr "Password"
+#~ msgid "Password"
+#~ msgstr "Password"
 
 # password dialog title
-#: app/views/administrator/index.html.erb:63
 #, fuzzy
-#| msgid "Password"
-msgid "Confirm password"
-msgstr "Password"
-
-# password dialog title
-#: app/views/administrator/index.html.erb:65
-#, fuzzy
-#| msgid "Password"
-msgid "Save Password"
-msgstr "Password"
-
-#: app/views/administrator/index.html.erb:70
-msgid "Forward mail to"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:72
-#, fuzzy
-#| msgid "Save"
-msgid "Save Mail"
-msgstr "Save"
+#~| msgid "Password"
+#~ msgid "Save Password"
+#~ msgstr "Password"
