--- a/plugins/administrator/locale/et/webyast-root-user.po
+++ b/plugins/administrator/locale/et/webyast-root-user.po
@@ -1,133 +1,97 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui 1.0.0\n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
+"Project-Id-Version: autoinst.fi\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
 "PO-Revision-Date: 2003-09-22 13:26+0200\n"
 "Last-Translator: Ain Vagula <avagula@gmail.com>\n"
 "Language-Team: Estonian <et@li.org>\n"
+"Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
 #, fuzzy
-msgid "Enter a valid e-mail address."
-msgstr "`%s' ei ole korrektne IP-aadress."
-
-#: app/controllers/administrator_controller.rb:61
-#: app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "Paroolid ei kattu."
-
-#: app/controllers/administrator_controller.rb:74
-#: app/controllers/administrator_controller.rb:74
-#, fuzzy
-msgid "Administrator settings have been written."
-msgstr "Monitori sätted"
-
-#: app/controllers/administrator_controller.rb:84
-#: app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr ""
-
-#: app/controllers/administrator_controller.rb:96
-#: app/controllers/administrator_controller.rb:96
-msgid ""
-"Mail alias was set but outgoing mail server is not configured (%s<i>change</"
-"i>%s)."
-msgstr ""
-
-#: app/views/administrator/index.html.erb:22
-#: app/views/administrator/index.html.erb:22 shortcuts.yml:6
-#, fuzzy
-msgid "Administrator Settings"
-msgstr "Monitori sätted"
-
-#: app/views/administrator/index.html.erb:64
-#: app/views/administrator/index.html.erb:64
-#, fuzzy
-msgid "The passwords do not match."
-msgstr "Paroolid ei kattu."
-
-#: app/views/administrator/index.html.erb:65
-#: app/views/administrator/index.html.erb:65
-#, fuzzy
+#| msgid "The PKCS12 password is required."
 msgid "A password is required."
 msgstr "Vajalik on PKCS12 parool."
 
-#: app/views/administrator/index.html.erb:70
-#: app/views/administrator/index.html.erb:70
 #, fuzzy
-msgid "Password Strength:"
-msgstr "Paroolid kattuvad"
+#| msgid "Monitor Settings"
+msgid "Administrator Settings"
+msgstr "Monitori sätted"
 
-#: app/views/administrator/index.html.erb:72
-#: app/views/administrator/index.html.erb:72
-msgid "Weak"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:73
-#: app/views/administrator/index.html.erb:73
-msgid "Normal"
-msgstr "Normaalne"
-
-#: app/views/administrator/index.html.erb:74
-#: app/views/administrator/index.html.erb:74
 #, fuzzy
-msgid "Medium"
-msgstr "Andmekandja"
-
-#: app/views/administrator/index.html.erb:75
-#: app/views/administrator/index.html.erb:75
-msgid "Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:76
-#: app/views/administrator/index.html.erb:76
-msgid "Very Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:104
-#: app/views/administrator/index.html.erb:104
-msgid "Password Setup for User 'root'"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:105
-#: app/views/administrator/index.html.erb:105
-#, fuzzy
-msgid "New Password"
-msgstr "_Uus parool:"
+#| msgid "Monitor Settings"
+msgid "Administrator settings have been written."
+msgstr "Monitori sätted"
 
 # password dialog title
-#: app/views/administrator/index.html.erb:110
-#: app/views/administrator/index.html.erb:110
 #, fuzzy
+#| msgid "Change Password"
 msgid "Confirm Password"
 msgstr "Parooli muutmine"
 
-#: app/views/administrator/index.html.erb:119
-#: app/views/administrator/index.html.erb:119
-msgid "Mail Setup for User 'root'"
-msgstr ""
+#, fuzzy
+#| msgid "`%s' is not a valid ip address."
+msgid "Enter a valid e-mail address."
+msgstr "`%s' ei ole korrektne IP-aadress."
 
-#: app/views/administrator/index.html.erb:121
-#: app/views/administrator/index.html.erb:121
+#, fuzzy
+#| msgid "Error while parsing the certificate."
+msgid "Error while saving administrator settings."
+msgstr "Viga sertifikaadi parsimisel."
+
 msgid "Forward system mail to"
 msgstr ""
 
-#: app/views/administrator/index.html.erb:124
-#: app/views/administrator/index.html.erb:124
+msgid "Mail Setup for User 'root'"
+msgstr ""
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr ""
+
 #, fuzzy
+#| msgid "_New Password:"
+msgid "New Password"
+msgstr "_Uus parool:"
+
+msgid "Password Setup for User 'root'"
+msgstr ""
+
+msgid "Passwords do not match."
+msgstr "Paroolid ei kattu."
+
+msgid "Please wait"
+msgstr ""
+
+#, fuzzy
+#| msgid "Save"
 msgid "Save Mail Only"
 msgstr "Salvesta"
 
-#: shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr ""
+#, fuzzy
+#| msgid "Passwords do not match."
+msgid "The passwords do not match."
+msgstr "Paroolid ei kattu."
+
+#, fuzzy
+#~| msgid "Passwords match"
+#~ msgid "Password Strength:"
+#~ msgstr "Paroolid kattuvad"
+
+#~ msgid "Normal"
+#~ msgstr "Normaalne"
+
+#, fuzzy
+#~| msgid "Media"
+#~ msgid "Medium"
+#~ msgstr "Andmekandja"
+
+#, fuzzy
+#~| msgid "YaST System Administration"
+#~ msgid "Manage system administrator"
+#~ msgstr "YaST süsteemi administraator"
 
 # password dialog title
 #~ msgid "Password"
