--- a/plugins/administrator/locale/id/webyast-root-user.po
+++ b/plugins/administrator/locale/id/webyast-root-user.po
@@ -2,75 +2,85 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: translation@suse.de\n"
-"POT-Creation-Date: 2009-11-20 14:34+0100\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
 "PO-Revision-Date: 2002-10-08 13:38+0200\n"
 "Last-Translator: I Made Wiryana <made@nakula.rvs.uni-bielefeld.de>\n"
 "Language-Team: Indonesian <i18n@suse.de>\n"
+"Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: app/controllers/administrator_controller.rb:35
-#: app/views/administrator/index.html.erb:28
-msgid "Enter a valid e-mail address."
+msgid "A password is required."
 msgstr ""
 
-#: app/controllers/administrator_controller.rb:43
-msgid "Passwords do not match."
-msgstr "Password tidak cocok."
-
-#: app/controllers/administrator_controller.rb:60
-#, fuzzy
-#| msgid "Printer settings"
-msgid "Administrator settings have been written."
-msgstr "Seting printer"
-
-#: app/controllers/administrator_controller.rb:70
-#, fuzzy
-#| msgid "Error while closing old shadow file: %m"
-msgid "Error while saving administrator settings: %s"
-msgstr "Kesalahan ketika menutup file shadow lama: %m"
-
-#: app/views/administrator/index.html.erb:1
 #, fuzzy
 #| msgid "Printer settings"
 msgid "Administrator Settings"
 msgstr "Seting printer"
 
-#: app/views/administrator/index.html.erb:36
+#, fuzzy
+#| msgid "Printer settings"
+msgid "Administrator settings have been written."
+msgstr "Seting printer"
+
+# password dialog title
+#, fuzzy
+#| msgid "Password"
+msgid "Confirm Password"
+msgstr "Password"
+
+msgid "Enter a valid e-mail address."
+msgstr ""
+
+#, fuzzy
+#| msgid "Error while closing old shadow file: %m"
+msgid "Error while saving administrator settings."
+msgstr "Kesalahan ketika menutup file shadow lama: %m"
+
+msgid "Forward system mail to"
+msgstr ""
+
+msgid "Mail Setup for User 'root'"
+msgstr ""
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr ""
+
+#, fuzzy
+#| msgid "New Password: "
+msgid "New Password"
+msgstr "Password Baru: "
+
+msgid "Password Setup for User 'root'"
+msgstr ""
+
+msgid "Passwords do not match."
+msgstr "Password tidak cocok."
+
+msgid "Please wait"
+msgstr ""
+
+msgid "Save Mail Only"
+msgstr ""
+
 #, fuzzy
 #| msgid "Passwords do not match."
 msgid "The passwords do not match."
 msgstr "Password tidak cocok."
 
-#: app/views/administrator/index.html.erb:51
-msgid "Here, configure the settings for system administrator ('root')."
-msgstr ""
-
-# password dialog title
-#: app/views/administrator/index.html.erb:58
-msgid "Password"
-msgstr "Password"
-
-# password dialog title
-#: app/views/administrator/index.html.erb:63
 #, fuzzy
-#| msgid "Password"
-msgid "Confirm password"
-msgstr "Password"
+#~| msgid "Password: "
+#~ msgid "Password Strength:"
+#~ msgstr "Password: "
 
 # password dialog title
-#: app/views/administrator/index.html.erb:65
+#~ msgid "Password"
+#~ msgstr "Password"
+
+# password dialog title
 #, fuzzy
-#| msgid "Password"
-msgid "Save Password"
-msgstr "Password"
-
-#: app/views/administrator/index.html.erb:70
-msgid "Forward mail to"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:72
-msgid "Save Mail"
-msgstr ""
+#~| msgid "Password"
+#~ msgid "Save Password"
+#~ msgstr "Password"
