--- a/plugins/administrator/locale/it/webyast-root-user.po
+++ b/plugins/administrator/locale/it/webyast-root-user.po
@@ -1,104 +1,87 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
-#
+# translation of yast_webclient_administrator.po to Italiano
+# Andrea Florio <andrea@opensuse.org>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:27\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: yast_webclient_administrator\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-06-17 09:02+0100\n"
+"Last-Translator: Andrea Turrini <andrea.turrini@gmail.com>\n"
+"Language-Team: Italian <opensuse-translation@opensuse.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Language: Italian\n"
 
-#: app/controllers/administrator_controller.rb:53 app/views/administrator/index.html.erb:56
-#: ./app/controllers/administrator_controller.rb:53 ./app/views/administrator/index.html.erb:56
-msgid "Enter a valid e-mail address."
-msgstr "Immettere un indirizzo e-mail valido."
+msgid "A password is required."
+msgstr "È richiesta una password."
 
-#: app/controllers/administrator_controller.rb:61 ./app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "Le password non corrispondono."
+msgid "Administrator Settings"
+msgstr "Impostazioni dell'amministratore"
 
-#: app/controllers/administrator_controller.rb:74 ./app/controllers/administrator_controller.rb:74
 msgid "Administrator settings have been written."
 msgstr "Le impostazioni dell'amministratore sono state scritte."
 
-#: app/controllers/administrator_controller.rb:84 ./app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr "Errore durante il salvataggio delle impostazioni dell'amministratore: %s"
-
-#: app/controllers/administrator_controller.rb:96 ./app/controllers/administrator_controller.rb:96
-msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
-msgstr "L'alias di posta è stato impostato, tuttavia il server di posta in uscita non è configurato (%s<i>change</i>%s)."
-
-#: app/views/administrator/index.html.erb:22 ./app/views/administrator/index.html.erb:22 ./shortcuts.yml:6
-msgid "Administrator Settings"
-msgstr "Impostazioni amministratore"
-
-#: app/views/administrator/index.html.erb:63 ./app/views/administrator/index.html.erb:63
-msgid "Please wait"
-msgstr "Attendere"
-
-#: app/views/administrator/index.html.erb:71 ./app/views/administrator/index.html.erb:71
-msgid "The passwords do not match."
-msgstr "Le password non corrispondono."
-
-#: app/views/administrator/index.html.erb:72 ./app/views/administrator/index.html.erb:72
-msgid "A password is required."
-msgstr "Password obbligatoria."
-
-#: app/views/administrator/index.html.erb:77 ./app/views/administrator/index.html.erb:77
-msgid "Password Strength:"
-msgstr "Resistenza password:"
-
-#: app/views/administrator/index.html.erb:79 ./app/views/administrator/index.html.erb:79
-msgid "Weak"
-msgstr "Debole"
-
-#: app/views/administrator/index.html.erb:80 ./app/views/administrator/index.html.erb:80
-msgid "Normal"
-msgstr "Normale"
-
-#: app/views/administrator/index.html.erb:81 ./app/views/administrator/index.html.erb:81
-msgid "Medium"
-msgstr "Medio"
-
-#: app/views/administrator/index.html.erb:82 ./app/views/administrator/index.html.erb:82
-msgid "Strong"
-msgstr "Forte"
-
-#: app/views/administrator/index.html.erb:83 ./app/views/administrator/index.html.erb:83
-msgid "Very Strong"
-msgstr "Molto forte"
-
-#: app/views/administrator/index.html.erb:113 ./app/views/administrator/index.html.erb:113
-msgid "Password Setup for User 'root'"
-msgstr "Configurazione password per utente 'root'"
-
-#: app/views/administrator/index.html.erb:114 ./app/views/administrator/index.html.erb:114
-msgid "New Password"
-msgstr "Nuova password"
-
-#: app/views/administrator/index.html.erb:118 ./app/views/administrator/index.html.erb:118
 msgid "Confirm Password"
 msgstr "Conferma password"
 
-#: app/views/administrator/index.html.erb:127 ./app/views/administrator/index.html.erb:127
-msgid "Mail Setup for User 'root'"
-msgstr "Configurazione posta per utente 'root'"
+# TLABEL modules/dialup/dialup.ycp:1329
+msgid "Enter a valid e-mail address."
+msgstr "Inserire un indirizzo e-mail valido."
 
-#: app/views/administrator/index.html.erb:129 ./app/views/administrator/index.html.erb:129
+msgid "Error while saving administrator settings."
+msgstr "Errore durante il salvataggio delle impostazioni dell'amministratore."
+
 msgid "Forward system mail to"
-msgstr "Inoltra e-mail di sistema a"
+msgstr "Inoltra posta di sistema a"
 
-#: app/views/administrator/index.html.erb:132 ./app/views/administrator/index.html.erb:132
+msgid "Mail Setup for User 'root'"
+msgstr "Impostazione posta per l'utente 'root'"
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr "È stato impostato un alias per la posta ma il server di posta in uscita non è configurato (%s<i>cambia</i>%s)."
+
+msgid "New Password"
+msgstr "Nuova password"
+
+msgid "Password Setup for User 'root'"
+msgstr "Impostazione password per l'utente 'root'"
+
+msgid "Passwords do not match."
+msgstr "Le password non corrispondono."
+
+msgid "Please wait"
+msgstr "Attendere..."
+
 msgid "Save Mail Only"
-msgstr "Salva solo posta"
+msgstr "Salva solamente la posta"
 
-#: ./shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr "Gestisci amministratore di sistema"
+msgid "The passwords do not match."
+msgstr "Le password non corrispondono."
 
+#~ msgid "Password Strength:"
+#~ msgstr "Robustezza password:"
+
+#~ msgid "Weak"
+#~ msgstr "Debole"
+
+#~ msgid "Normal"
+#~ msgstr "Normale"
+
+#~ msgid "Medium"
+#~ msgstr "Media"
+
+#~ msgid "Strong"
+#~ msgstr "Forte"
+
+#~ msgid "Very Strong"
+#~ msgstr "Molto forte"
+
+#~ msgid "Manage system administrator"
+#~ msgstr "Gestisci amministratore di sistema"
+
+#~ msgid "Here, configure the settings for system administrator ('root')."
+#~ msgstr "Qui puoi configurare le impostazioni per l'amministratore di sistema ('root')."
