--- a/plugins/administrator/locale/km/webyast-root-user.po
+++ b/plugins/administrator/locale/km/webyast-root-user.po
@@ -1,80 +1,65 @@
+# translation of webyast-root-user.km.po to Khmer
+# Seng Sutha <sutha@khmeros.info>, 2010.
+# Khoem Sokhem <khoemsokhem@khmeros.info>, 2010, 2012.
+# Chan Sambathratanak <ratanak@khmeros.info>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: @PACKAGE@\n"
+"Project-Id-Version: webyast-root-user.km\n"
 "Report-Msgid-Bugs-To: translation@suse.de\n"
-"POT-Creation-Date: 2009-11-20 14:34+0100\n"
-"PO-Revision-Date: 2006-02-18 09:47+0700\n"
-"Last-Translator: Keo Sophon <keosophon@khmeros.info>\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-06-15 09:19+0700\n"
+"Last-Translator: Khoem Sokhem <khoemsokhem@khmeros.info>\n"
 "Language-Team: Khmer <support@khmeros.info>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: KBabel 1.11.4\n"
+"X-Language: km-KH\n"
 
-#: app/controllers/administrator_controller.rb:35
-#: app/views/administrator/index.html.erb:28
-#, fuzzy
-#| msgid "`%s' is not a valid ip address."
-msgid "Enter a valid e-mail address."
-msgstr "`%s' មិន​មែន​ជា​អាសយដ្ឋាន ip ត្រឹមត្រូវ ។"
+msgid "A password is required."
+msgstr "ត្រូវការ​ពាក្យ​សម្ងាត់ ។​"
 
-#: app/controllers/administrator_controller.rb:43
-msgid "Passwords do not match."
-msgstr "ពាក្យ​សម្ងាត់​មិន​ដូច​គ្នា​ទេ ។"
-
-#: app/controllers/administrator_controller.rb:60
-#, fuzzy
-#| msgid "Monitor Settings"
-msgid "Administrator settings have been written."
-msgstr "ការ​កំណត់​ម៉ូនីទ័រ"
-
-#: app/controllers/administrator_controller.rb:70
-#, fuzzy
-#| msgid "Error while closing old shadow file: %m"
-msgid "Error while saving administrator settings: %s"
-msgstr "មាន​កំហុស ខណៈ​ពេល​បិទ​ឯកសារ shadown ចាស់ ៖ %m"
-
-#: app/views/administrator/index.html.erb:1
-#, fuzzy
-#| msgid "Monitor Settings"
 msgid "Administrator Settings"
-msgstr "ការ​កំណត់​ម៉ូនីទ័រ"
+msgstr "ការ​កំណត់​របស់​អ្នក​គ្រប់​គ្រង​"
 
-#: app/views/administrator/index.html.erb:36
-#, fuzzy
-#| msgid "Passwords do not match."
+msgid "Administrator settings have been written."
+msgstr "កា​រ​កំណត់របស់​​​អ្នក​គ្រប់គ្រង​ត្រូវ​បាន​សរសេរ ។"
+
+msgid "Confirm Password"
+msgstr "អះអាង​ពាក្យសម្ងាត់"
+
+msgid "Enter a valid e-mail address."
+msgstr "បញ្ចូល​អាសយដ្ឋាន​​អ៊ីមែល​ដែល​ត្រឹមត្រូវ ។"
+
+#
+msgid "Error while saving administrator settings."
+msgstr "កំហុស​ខណៈ​ដែល​រក្សាទុក​ការ​កំណត់​របស់​អ្នក​គ្រប់គ្រង ។"
+
+msgid "Forward system mail to"
+msgstr "បញ្ជូន​សំបុត្រ​ប្រព័ន្ធ​បន្ត​ទៅ​"
+
+msgid "Mail Setup for User 'root'"
+msgstr "ការ​រៀបចំ​សំបុត្រ​សម្រាប់​អ្នក​ប្រើ​ជា 'root'"
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr "ឈ្មោះ​ក្លែងក្លាយ​របស់​​សំបុត្រ​ត្រូវ​បាន​កំណត់ ប៉ុន្តែ​ម៉ាស៊ីន​បម្រើ​សំបុត្រ​ចេញ​មិន​ត្រូវ​បាន​កំណត់​រចនាសម្ព័ន្ធ​ទេ (%s<i>ផ្លាស់ប្ដូរ</i>%s) ។"
+
+msgid "New Password"
+msgstr "ពាក្យ​សម្ងាត់​ថ្មី"
+
+msgid "Password Setup for User 'root'"
+msgstr "ការ​រៀបចំ​ពាក្យ​សម្ងាត់​សម្រាប់​អ្នក​ប្រើ​ជា 'root'"
+
+msgid "Passwords do not match."
+msgstr "ពាក្យ​សម្ងាត់​មិន​ផ្គូផ្គង​ទេ ។"
+
+msgid "Please wait"
+msgstr "សូម​រង់ចាំ"
+
+msgid "Save Mail Only"
+msgstr "រក្សាទុក​តែ​សំបុត្រ​ប៉ុណ្ណោះ"
+
 msgid "The passwords do not match."
-msgstr "ពាក្យ​សម្ងាត់​មិន​ដូច​គ្នា​ទេ ។"
-
-#: app/views/administrator/index.html.erb:51
-msgid "Here, configure the settings for system administrator ('root')."
-msgstr ""
-
-# password dialog title
-#: app/views/administrator/index.html.erb:58
-msgid "Password"
-msgstr "ពាក្យសម្ងាត់"
-
-#: app/views/administrator/index.html.erb:63
-#, fuzzy
-#| msgid "_Confirm Password:"
-msgid "Confirm password"
-msgstr "អះអាង​ពាក្យ​សម្ងាត់ ៖ "
-
-#: app/views/administrator/index.html.erb:65
-#, fuzzy
-#| msgid "Change Password"
-msgid "Save Password"
-msgstr "ផ្លាស់ប្ដូរ​ពាក្យ​សម្ងាត់"
-
-#: app/views/administrator/index.html.erb:70
-#, fuzzy
-#| msgid "Forwardable"
-msgid "Forward mail to"
-msgstr "អាច​បញ្ជូន​បន្ត​បាន"
-
-#: app/views/administrator/index.html.erb:72
-#, fuzzy
-#| msgid "Save"
-msgid "Save Mail"
-msgstr "រក្សា​ទុក"
+msgstr "ពាក្យសម្ងាត់​មិន​ផ្គូផ្គង​ទេ ។"
