--- a/plugins/administrator/locale/ko/webyast-root-user.po
+++ b/plugins/administrator/locale/ko/webyast-root-user.po
@@ -1,104 +1,89 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:28\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: yast_webclient_administrator.ko\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2010-06-08 12:08+0900\n"
+"Last-Translator: Yunseok Choi <xein@naver.com>\n"
+"Language-Team: Korean <xein@naver.com>\n"
+"Language: ko\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Poedit-Language: Korean\n"
+"X-Poedit-Country: KOREA, REPUBLIC OF\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
-#: app/controllers/administrator_controller.rb:53 app/views/administrator/index.html.erb:56
-#: ./app/controllers/administrator_controller.rb:53 ./app/views/administrator/index.html.erb:56
-msgid "Enter a valid e-mail address."
-msgstr "유효한 전자 메일 주소를 입력하십시오."
+msgid "A password is required."
+msgstr "열쇠글이 필요 합니다."
 
-#: app/controllers/administrator_controller.rb:61 ./app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "비밀번호가 일치하지 않습니다."
-
-#: app/controllers/administrator_controller.rb:74 ./app/controllers/administrator_controller.rb:74
-msgid "Administrator settings have been written."
-msgstr "관리자 설정이 기록되었습니다."
-
-#: app/controllers/administrator_controller.rb:84 ./app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr "관리자 설정을 저장하는 동안 오류 발생: %s"
-
-#: app/controllers/administrator_controller.rb:96 ./app/controllers/administrator_controller.rb:96
-msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
-msgstr "메일 별칭이 설정되었지만 보내는 메일 서버가 구성되지 않았습니다(%s<i>변경</i>%s)."
-
-#: app/views/administrator/index.html.erb:22 ./app/views/administrator/index.html.erb:22 ./shortcuts.yml:6
 msgid "Administrator Settings"
 msgstr "관리자 설정"
 
-#: app/views/administrator/index.html.erb:63 ./app/views/administrator/index.html.erb:63
-msgid "Please wait"
-msgstr "잠시 기다리십시오"
+msgid "Administrator settings have been written."
+msgstr "관리자 설정을 기록하였습니다."
 
-#: app/views/administrator/index.html.erb:71 ./app/views/administrator/index.html.erb:71
-msgid "The passwords do not match."
-msgstr "비밀번호가 일치하지 않습니다."
-
-#: app/views/administrator/index.html.erb:72 ./app/views/administrator/index.html.erb:72
-msgid "A password is required."
-msgstr "비밀번호를 입력해야 합니다."
-
-#: app/views/administrator/index.html.erb:77 ./app/views/administrator/index.html.erb:77
-msgid "Password Strength:"
-msgstr "비밀번호 강도:"
-
-#: app/views/administrator/index.html.erb:79 ./app/views/administrator/index.html.erb:79
-msgid "Weak"
-msgstr "약함"
-
-#: app/views/administrator/index.html.erb:80 ./app/views/administrator/index.html.erb:80
-msgid "Normal"
-msgstr "일반"
-
-#: app/views/administrator/index.html.erb:81 ./app/views/administrator/index.html.erb:81
-msgid "Medium"
-msgstr "보통"
-
-#: app/views/administrator/index.html.erb:82 ./app/views/administrator/index.html.erb:82
-msgid "Strong"
-msgstr "강함"
-
-#: app/views/administrator/index.html.erb:83 ./app/views/administrator/index.html.erb:83
-msgid "Very Strong"
-msgstr "매우 강함"
-
-#: app/views/administrator/index.html.erb:113 ./app/views/administrator/index.html.erb:113
-msgid "Password Setup for User 'root'"
-msgstr "'루트' 사용자에 대한 비밀번호 설정"
-
-#: app/views/administrator/index.html.erb:114 ./app/views/administrator/index.html.erb:114
-msgid "New Password"
-msgstr "새 비밀번호"
-
-#: app/views/administrator/index.html.erb:118 ./app/views/administrator/index.html.erb:118
 msgid "Confirm Password"
-msgstr "비밀번호 확인"
+msgstr "열쇠글 확인"
 
-#: app/views/administrator/index.html.erb:127 ./app/views/administrator/index.html.erb:127
-msgid "Mail Setup for User 'root'"
-msgstr "'루트' 사용자에 대한 메일 설정"
+msgid "Enter a valid e-mail address."
+msgstr "올바른 메일 주소를 입력하세요."
 
-#: app/views/administrator/index.html.erb:129 ./app/views/administrator/index.html.erb:129
+#, fuzzy
+#| msgid "Error while saving administrator settings: %s"
+msgid "Error while saving administrator settings."
+msgstr "관리자 설정을 저장하는 도중 오류: %s"
+
 msgid "Forward system mail to"
-msgstr "다음으로 시스템 메일 전달"
+msgstr "시스템 메일을 전달"
 
-#: app/views/administrator/index.html.erb:132 ./app/views/administrator/index.html.erb:132
+msgid "Mail Setup for User 'root'"
+msgstr "'root' 사용자용 메일 설정"
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr "메일 별칭이 설정되었지만 내보내는 메일 서버가 설정되지 않았습니다(%s<i>change</i>%s)."
+
+msgid "New Password"
+msgstr "새 열쇠글"
+
+msgid "Password Setup for User 'root'"
+msgstr "'root' 사용자용 열쇠글 설정"
+
+msgid "Passwords do not match."
+msgstr "열쇠글이 일치하지 않습니다."
+
+#, fuzzy
+#| msgid "Please wait..."
+msgid "Please wait"
+msgstr "잠시 기다려주세요..."
+
 msgid "Save Mail Only"
 msgstr "메일만 저장"
 
-#: ./shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr "시스템 관리자 관리"
+msgid "The passwords do not match."
+msgstr "열쇠글이 일치하지 않습니다."
 
+#~ msgid "Password Strength:"
+#~ msgstr "열쇠글 보안성"
+
+#~ msgid "Weak"
+#~ msgstr "약함"
+
+#~ msgid "Normal"
+#~ msgstr "보통"
+
+#~ msgid "Medium"
+#~ msgstr "중간"
+
+#~ msgid "Strong"
+#~ msgstr "강함"
+
+#~ msgid "Very Strong"
+#~ msgstr "매우 강함"
+
+#~ msgid "Manage system administrator"
+#~ msgstr "시스템 관리자 관리"
+
+#~ msgid "Here, configure the settings for system administrator ('root')."
+#~ msgstr "이곳에서 시스템 관리자('root')의 설정을 구성합니다."
