--- a/plugins/administrator/locale/lt/webyast-root-user.po
+++ b/plugins/administrator/locale/lt/webyast-root-user.po
@@ -3,136 +3,88 @@
 #
 # This file is distributed under the same license as @PACKAGE@ package. FIRST
 #
-# Mindaugas Baranauskas <embar@users.berlios.de>, 2010.
+# Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>, 2010, 2011, 2013.
+# Mantas Kondrotas <dalelemanes@gmail.com>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: translation@suse.de\n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
-"PO-Revision-Date: 2010-01-04 12:17+0200\n"
-"Last-Translator: Mindaugas Baranauskas <embar@users.berlios.de>\n"
-"Language-Team: Lithuanian <kde-i18n-doc@kde.org>\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2013-01-25 09:34+0200\n"
+"Last-Translator: Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>\n"
+"Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
-"100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Lokalize 1.0\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 ? 0 : n%10==1 && n%100!=11 ? 1 : n%10>=2 && (n%100<10 || n%100>=20) ? 2 : 3);\n"
+"X-Generator: Lokalize 1.5\n"
 
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-msgid "Enter a valid e-mail address."
-msgstr "Įveskite tinkamą el.pašto adresą."
+msgid "A password is required."
+msgstr "Reikalingas slaptažodis."
 
-#: app/controllers/administrator_controller.rb:61
-#: app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "Slaptažodžiai nesutampa"
-
-#: app/controllers/administrator_controller.rb:74
-#: app/controllers/administrator_controller.rb:74
-msgid "Administrator settings have been written."
-msgstr "Administratoriaus nuostatos įrašytos."
-
-#: app/controllers/administrator_controller.rb:84
-#: app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr "Įrašant administratoriaus nuostatas įvyko klaida: %s"
-
-#: app/controllers/administrator_controller.rb:96
-#: app/controllers/administrator_controller.rb:96
-msgid ""
-"Mail alias was set but outgoing mail server is not configured (%s<i>change</"
-"i>%s)."
-msgstr ""
-
-#: app/views/administrator/index.html.erb:22
-#: app/views/administrator/index.html.erb:22 shortcuts.yml:6
 msgid "Administrator Settings"
 msgstr "Administratoriaus nuostatos"
 
-#: app/views/administrator/index.html.erb:64
-#: app/views/administrator/index.html.erb:64
+msgid "Administrator settings have been written."
+msgstr "Administratoriaus nuostatos buvo įrašytos."
+
+msgid "Confirm Password"
+msgstr "Patvirtinkite slaptažodį"
+
+msgid "Enter a valid e-mail address."
+msgstr "Įveskite galiojantį el.pašto adresą."
+
+msgid "Error while saving administrator settings."
+msgstr "Įrašant administratoriaus nuostatas įvyko klaida."
+
+msgid "Forward system mail to"
+msgstr "Persiųsti sistemos paštą į"
+
+msgid "Mail Setup for User 'root'"
+msgstr "„Pagrindinio naudotojo“ pašto nuostatos"
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr "Pašto alternatyvusis vardas buvo nustatytas, tačiau laiškų išsiuntimo serveris nėra sukonfigūruotas (%s<i>keisti</i>%s)."
+
+msgid "New Password"
+msgstr "Naujas slaptažodis"
+
+msgid "Password Setup for User 'root'"
+msgstr "Naudotojo „root“ slaptažodžio nuostatos"
+
+msgid "Passwords do not match."
+msgstr "Slaptažodžiai nesutampa."
+
+msgid "Please wait"
+msgstr "Palaukite"
+
+msgid "Save Mail Only"
+msgstr "Tik įrašyti paštą"
+
 msgid "The passwords do not match."
 msgstr "Slaptažodžiai nesutampa."
 
-#: app/views/administrator/index.html.erb:65
-#: app/views/administrator/index.html.erb:65
-#, fuzzy
-msgid "A password is required."
-msgstr "Reikalingas PKCS12 slaptažodis."
+#~ msgid "Password Strength:"
+#~ msgstr "Slaptažodžio stiprumas:"
 
-#: app/views/administrator/index.html.erb:70
-#: app/views/administrator/index.html.erb:70
-#, fuzzy
-msgid "Password Strength:"
-msgstr "Slaptažodžiai sutampa"
+#~ msgid "Weak"
+#~ msgstr "Silpnas"
 
-#: app/views/administrator/index.html.erb:72
-#: app/views/administrator/index.html.erb:72
-msgid "Weak"
-msgstr ""
+#~ msgid "Normal"
+#~ msgstr "Normalus"
 
-#: app/views/administrator/index.html.erb:73
-#: app/views/administrator/index.html.erb:73
-msgid "Normal"
-msgstr "Normalus"
+#~ msgid "Medium"
+#~ msgstr "Vidutinis"
 
-#: app/views/administrator/index.html.erb:74
-#: app/views/administrator/index.html.erb:74
-#, fuzzy
-msgid "Medium"
-msgstr "Laikmenos"
+#~ msgid "Strong"
+#~ msgstr "Stiprus"
 
-#: app/views/administrator/index.html.erb:75
-#: app/views/administrator/index.html.erb:75
-msgid "Strong"
-msgstr ""
+#~ msgid "Very Strong"
+#~ msgstr "Labai stiprus"
 
-#: app/views/administrator/index.html.erb:76
-#: app/views/administrator/index.html.erb:76
-msgid "Very Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:104
-#: app/views/administrator/index.html.erb:104
-msgid "Password Setup for User 'root'"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:105
-#: app/views/administrator/index.html.erb:105
-#, fuzzy
-msgid "New Password"
-msgstr "_Naujas slaptažodis:"
-
-#: app/views/administrator/index.html.erb:110
-#: app/views/administrator/index.html.erb:110
-#, fuzzy
-msgid "Confirm Password"
-msgstr "_Patvirtinkite slaptažodį:"
-
-#: app/views/administrator/index.html.erb:119
-#: app/views/administrator/index.html.erb:119
-msgid "Mail Setup for User 'root'"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:121
-#: app/views/administrator/index.html.erb:121
-#, fuzzy
-msgid "Forward system mail to"
-msgstr "Persiųsti paštą į"
-
-#: app/views/administrator/index.html.erb:124
-#: app/views/administrator/index.html.erb:124
-#, fuzzy
-msgid "Save Mail Only"
-msgstr "Įrašyti paštą"
-
-#: shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr ""
+#~ msgid "Manage system administrator"
+#~ msgstr "Tvarkyti sistemos administratorių"
 
 #~ msgid "Here, configure the settings for system administrator ('root')."
 #~ msgstr "Čia konfigūruokite sistemos administratoriaus („root“) nuostatas."
