--- a/plugins/administrator/locale/mr/webyast-root-user.po
+++ b/plugins/administrator/locale/mr/webyast-root-user.po
@@ -4,134 +4,100 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui 1.0.0\n"
+"Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: i18n@suse.de\n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
 "PO-Revision-Date: 2005-07-29 15:37+0530\n"
 "Last-Translator: \"( अमेय पाळंदे ) Ameya Palande\" <2ameya@gmail.com>\n"
 "Language-Team: Marathi <i18n@suse.de>\n"
+"Language: mr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
 #, fuzzy
-msgid "Enter a valid e-mail address."
-msgstr "`%s' हा वैध ip पत्ता नाही."
-
-#: app/controllers/administrator_controller.rb:61
-#: app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "पासवर्ड जुळत नाही"
-
-#: app/controllers/administrator_controller.rb:74
-#: app/controllers/administrator_controller.rb:74
-#, fuzzy
-msgid "Administrator settings have been written."
-msgstr " मॉनिटर संस्थापन"
-
-#: app/controllers/administrator_controller.rb:84
-#: app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr ""
-
-#: app/controllers/administrator_controller.rb:96
-#: app/controllers/administrator_controller.rb:96
-msgid ""
-"Mail alias was set but outgoing mail server is not configured (%s<i>change</"
-"i>%s)."
-msgstr ""
-
-#: app/views/administrator/index.html.erb:22
-#: app/views/administrator/index.html.erb:22 shortcuts.yml:6
-#, fuzzy
-msgid "Administrator Settings"
-msgstr " मॉनिटर संस्थापन"
-
-#: app/views/administrator/index.html.erb:64
-#: app/views/administrator/index.html.erb:64
-#, fuzzy
-msgid "The passwords do not match."
-msgstr "पासवर्ड जुळत नाही"
-
-#: app/views/administrator/index.html.erb:65
-#: app/views/administrator/index.html.erb:65
-#, fuzzy
+#| msgid "The PKCS12 password is required."
 msgid "A password is required."
 msgstr " PKCS12 पासवर्ड आवश्यक आहे."
 
-#: app/views/administrator/index.html.erb:70
-#: app/views/administrator/index.html.erb:70
 #, fuzzy
-msgid "Password Strength:"
-msgstr " पासवर्ड जुळतात"
+#| msgid "Monitor Settings"
+msgid "Administrator Settings"
+msgstr " मॉनिटर संस्थापन"
 
-#: app/views/administrator/index.html.erb:72
-#: app/views/administrator/index.html.erb:72
-msgid "Weak"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:73
-#: app/views/administrator/index.html.erb:73
-msgid "Normal"
-msgstr "सामान्य"
-
-#: app/views/administrator/index.html.erb:74
-#: app/views/administrator/index.html.erb:74
 #, fuzzy
-msgid "Medium"
-msgstr "माध्यम"
+#| msgid "Monitor Settings"
+msgid "Administrator settings have been written."
+msgstr " मॉनिटर संस्थापन"
 
-#: app/views/administrator/index.html.erb:75
-#: app/views/administrator/index.html.erb:75
-msgid "Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:76
-#: app/views/administrator/index.html.erb:76
-msgid "Very Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:104
-#: app/views/administrator/index.html.erb:104
-msgid "Password Setup for User 'root'"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:105
-#: app/views/administrator/index.html.erb:105
 #, fuzzy
-msgid "New Password"
-msgstr "_ नवीन पासवर्ड:"
-
-#: app/views/administrator/index.html.erb:110
-#: app/views/administrator/index.html.erb:110
-#, fuzzy
+#| msgid "_Confirm Password:"
 msgid "Confirm Password"
 msgstr "_ पासवर्डची पुष्टी करा:"
 
-#: app/views/administrator/index.html.erb:119
-#: app/views/administrator/index.html.erb:119
-msgid "Mail Setup for User 'root'"
-msgstr ""
+#, fuzzy
+#| msgid "`%s' is not a valid ip address."
+msgid "Enter a valid e-mail address."
+msgstr "`%s' हा वैध ip पत्ता नाही."
 
-#: app/views/administrator/index.html.erb:121
-#: app/views/administrator/index.html.erb:121
+#, fuzzy
+#| msgid "Error while writing new shadow file: %m"
+msgid "Error while saving administrator settings."
+msgstr "नवीन शॅडो फाईल लिहिताना चूक: %m"
+
 msgid "Forward system mail to"
 msgstr ""
 
-#: app/views/administrator/index.html.erb:124
-#: app/views/administrator/index.html.erb:124
+msgid "Mail Setup for User 'root'"
+msgstr ""
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr ""
+
 #, fuzzy
+#| msgid "_New Password:"
+msgid "New Password"
+msgstr "_ नवीन पासवर्ड:"
+
+msgid "Password Setup for User 'root'"
+msgstr ""
+
+msgid "Passwords do not match."
+msgstr "पासवर्ड जुळत नाही"
+
+#, fuzzy
+#| msgid "Please wait..."
+msgid "Please wait"
+msgstr "कृपया प्रतीक्षा करा..."
+
+#, fuzzy
+#| msgid "Save"
 msgid "Save Mail Only"
 msgstr "जतन करा"
 
-#: shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr ""
+#, fuzzy
+#| msgid "Passwords do not match."
+msgid "The passwords do not match."
+msgstr "पासवर्ड जुळत नाही"
+
+#, fuzzy
+#~| msgid "Passwords match"
+#~ msgid "Password Strength:"
+#~ msgstr " पासवर्ड जुळतात"
+
+#~ msgid "Normal"
+#~ msgstr "सामान्य"
+
+#, fuzzy
+#~| msgid "Media"
+#~ msgid "Medium"
+#~ msgstr "माध्यम"
+
+#, fuzzy
+#~| msgid "Standby disabled by administrator."
+#~ msgid "Manage system administrator"
+#~ msgstr "एडमिनिस्ट्रेटरने स्टॅंडबाय  डिस्बल केले आहे."
 
 #~ msgid "Password"
 #~ msgstr "पासवर्ड"
