--- a/plugins/administrator/locale/pt_BR/webyast-root-user.po
+++ b/plugins/administrator/locale/pt_BR/webyast-root-user.po
@@ -1,104 +1,94 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# @TITLE@
+# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
 #
+# This file is distributed under the same license as @PACKAGE@ package. FIRST
+#
+# Isis Binder <isis.binder@gmail.com>, 2010.
+# Luiz Fernando Ranghetti <elchevive@opensuse.org>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:31\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: yast_webclient_administrator\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-10-01 12:20-0300\n"
+"Last-Translator: Isis Binder <isis.binder@gmail.com>\n"
+"Language-Team: Brazilian Portuguese <opensuse-pt@opensuse.org>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 1.2\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
+"X-Poedit-Language: Portuguese\n"
+"X-Poedit-Country: BRAZIL\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
-#: app/controllers/administrator_controller.rb:53 app/views/administrator/index.html.erb:56
-#: ./app/controllers/administrator_controller.rb:53 ./app/views/administrator/index.html.erb:56
-msgid "Enter a valid e-mail address."
-msgstr "Digite um endereço de e-mail válido."
+msgid "A password is required."
+msgstr "É necessário informar uma senha."
 
-#: app/controllers/administrator_controller.rb:61 ./app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "As senhas não são iguais."
+msgid "Administrator Settings"
+msgstr "Configurações do administrador"
 
-#: app/controllers/administrator_controller.rb:74 ./app/controllers/administrator_controller.rb:74
 msgid "Administrator settings have been written."
 msgstr "As configurações do administrador foram gravadas."
 
-#: app/controllers/administrator_controller.rb:84 ./app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr "Erro ao gravar as configurações do administrador: %s"
-
-#: app/controllers/administrator_controller.rb:96 ./app/controllers/administrator_controller.rb:96
-msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
-msgstr "O álias de correio foi definido, mas o servidor de correio eletrônico de saída não foi configurado (%s<i>mudar</i>%s)."
-
-#: app/views/administrator/index.html.erb:22 ./app/views/administrator/index.html.erb:22 ./shortcuts.yml:6
-msgid "Administrator Settings"
-msgstr "Configurações do Administrador"
-
-#: app/views/administrator/index.html.erb:63 ./app/views/administrator/index.html.erb:63
-msgid "Please wait"
-msgstr "Aguarde"
-
-#: app/views/administrator/index.html.erb:71 ./app/views/administrator/index.html.erb:71
-msgid "The passwords do not match."
-msgstr "As senhas não correspondem."
-
-#: app/views/administrator/index.html.erb:72 ./app/views/administrator/index.html.erb:72
-msgid "A password is required."
-msgstr "Uma senha é obrigatória."
-
-#: app/views/administrator/index.html.erb:77 ./app/views/administrator/index.html.erb:77
-msgid "Password Strength:"
-msgstr "Força da Senha:"
-
-#: app/views/administrator/index.html.erb:79 ./app/views/administrator/index.html.erb:79
-msgid "Weak"
-msgstr "Fraco"
-
-#: app/views/administrator/index.html.erb:80 ./app/views/administrator/index.html.erb:80
-msgid "Normal"
-msgstr "Normal"
-
-#: app/views/administrator/index.html.erb:81 ./app/views/administrator/index.html.erb:81
-msgid "Medium"
-msgstr "Médio"
-
-#: app/views/administrator/index.html.erb:82 ./app/views/administrator/index.html.erb:82
-msgid "Strong"
-msgstr "Forte"
-
-#: app/views/administrator/index.html.erb:83 ./app/views/administrator/index.html.erb:83
-msgid "Very Strong"
-msgstr "Muito Forte"
-
-#: app/views/administrator/index.html.erb:113 ./app/views/administrator/index.html.erb:113
-msgid "Password Setup for User 'root'"
-msgstr "Configuração de Senha para Usuário 'root'"
-
-#: app/views/administrator/index.html.erb:114 ./app/views/administrator/index.html.erb:114
-msgid "New Password"
-msgstr "Nova Senha"
-
-#: app/views/administrator/index.html.erb:118 ./app/views/administrator/index.html.erb:118
 msgid "Confirm Password"
-msgstr "Confirmar Senha"
+msgstr "Confirmar senha"
 
-#: app/views/administrator/index.html.erb:127 ./app/views/administrator/index.html.erb:127
-msgid "Mail Setup for User 'root'"
-msgstr "Configuração de Correio para Usuário 'root'"
+msgid "Enter a valid e-mail address."
+msgstr "Digite um endereço de e-mail válido."
 
-#: app/views/administrator/index.html.erb:129 ./app/views/administrator/index.html.erb:129
+msgid "Error while saving administrator settings."
+msgstr "Erro ao salvar as configurações do administrador."
+
 msgid "Forward system mail to"
 msgstr "Encaminhar e-mail do sistema para"
 
-#: app/views/administrator/index.html.erb:132 ./app/views/administrator/index.html.erb:132
+msgid "Mail Setup for User 'root'"
+msgstr "Configuração de e-mail para o usuário 'root'"
+
+msgid ""
+"Mail alias was set but outgoing mail server is not configured (%s<i>change</"
+"i>%s)."
+msgstr ""
+"O apelido de e-mail foi configurado mas o servidor de saída de e-mail não "
+"está configurado (%s<i>alterar</i>%s)."
+
+msgid "New Password"
+msgstr "Nova senha"
+
+msgid "Password Setup for User 'root'"
+msgstr "Configuração de senha para o usuário 'root'"
+
+msgid "Passwords do not match."
+msgstr "As senhas não coincidem."
+
+msgid "Please wait"
+msgstr "Por favor, aguarde"
+
 msgid "Save Mail Only"
-msgstr "Gravar Apenas Correio"
+msgstr "Salvar e-mail somente"
 
-#: ./shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr "Gerenciar administrador do sistema"
+msgid "The passwords do not match."
+msgstr "As senhas não coincidem."
 
+#~ msgid "Password Strength:"
+#~ msgstr " Força da senha:"
+
+#~ msgid "Weak"
+#~ msgstr "Fraco"
+
+#~ msgid "Normal"
+#~ msgstr "Normal"
+
+#~ msgid "Medium"
+#~ msgstr "Médio"
+
+#~ msgid "Strong"
+#~ msgstr "Forte"
+
+#~ msgid "Very Strong"
+#~ msgstr "Muito forte"
+
+#~ msgid "Manage system administrator"
+#~ msgstr "Gerencie o administrador do sistema"
