--- a/plugins/administrator/locale/ru/webyast-root-user.po
+++ b/plugins/administrator/locale/ru/webyast-root-user.po
@@ -1,125 +1,82 @@
 # Alexander Melentiev <alex239@gmail.com>, 2009, 2010.
+# Alexander Melentiev <minton@opensuse.org>, 2011, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui 1.0.0\n"
+"Project-Id-Version: yast_webclient_administrator\n"
 "Report-Msgid-Bugs-To: translation@suse.de\n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
-"PO-Revision-Date: 2010-04-14 19:18+0400\n"
-"Last-Translator: Alexander Melentiev <alex239@gmail.com>\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-06-18 00:33+0400\n"
+"Last-Translator: Alexander Melentyev <minton@opensuse.org>\n"
 "Language-Team: Russian <opensuse-translation-ru@opensuse.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Lokalize 1.0\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Lokalize 1.4\n"
 
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-msgid "Enter a valid e-mail address."
-msgstr "Введите верный адрес e-mail."
-
-#: app/controllers/administrator_controller.rb:61
-#: app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "Пароли не совпадают."
-
-#: app/controllers/administrator_controller.rb:74
-#: app/controllers/administrator_controller.rb:74
-msgid "Administrator settings have been written."
-msgstr "Настройки администратора сохранены."
-
-#: app/controllers/administrator_controller.rb:84
-#: app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr "Ошибка при сохранении настроек администратора: %s"
-
-#: app/controllers/administrator_controller.rb:96
-#: app/controllers/administrator_controller.rb:96
-msgid ""
-"Mail alias was set but outgoing mail server is not configured (%s<i>change</"
-"i>%s)."
-msgstr ""
-"Задан почтовый алиас, но сервер исходящих сообщений не настроен (%"
-"s<i>изменить</i>%s)."
-
-#: app/views/administrator/index.html.erb:22
-#: app/views/administrator/index.html.erb:22 shortcuts.yml:6
-msgid "Administrator Settings"
-msgstr "Настройки администратора"
-
-#: app/views/administrator/index.html.erb:64
-#: app/views/administrator/index.html.erb:64
-msgid "The passwords do not match."
-msgstr "Пароли не совпадают."
-
-#: app/views/administrator/index.html.erb:65
-#: app/views/administrator/index.html.erb:65
 msgid "A password is required."
 msgstr "Необходим пароль."
 
-#: app/views/administrator/index.html.erb:70
-#: app/views/administrator/index.html.erb:70
-msgid "Password Strength:"
-msgstr "Сложность пароля:"
+msgid "Administrator Settings"
+msgstr "Настройки администратора"
 
-#: app/views/administrator/index.html.erb:72
-#: app/views/administrator/index.html.erb:72
-msgid "Weak"
-msgstr "Слабый"
+msgid "Administrator settings have been written."
+msgstr "Настройки администратора сохранены."
 
-#: app/views/administrator/index.html.erb:73
-#: app/views/administrator/index.html.erb:73
-msgid "Normal"
-msgstr "Нормальный"
-
-#: app/views/administrator/index.html.erb:74
-#: app/views/administrator/index.html.erb:74
-msgid "Medium"
-msgstr "Средний"
-
-#: app/views/administrator/index.html.erb:75
-#: app/views/administrator/index.html.erb:75
-msgid "Strong"
-msgstr "Сложный"
-
-#: app/views/administrator/index.html.erb:76
-#: app/views/administrator/index.html.erb:76
-msgid "Very Strong"
-msgstr "Очень сложный"
-
-#: app/views/administrator/index.html.erb:104
-#: app/views/administrator/index.html.erb:104
-msgid "Password Setup for User 'root'"
-msgstr "Настройка пароля для пользователя 'root'"
-
-#: app/views/administrator/index.html.erb:105
-#: app/views/administrator/index.html.erb:105
-msgid "New Password"
-msgstr "Новый пароль"
-
-#: app/views/administrator/index.html.erb:110
-#: app/views/administrator/index.html.erb:110
 msgid "Confirm Password"
 msgstr "Подтвердите пароль"
 
-#: app/views/administrator/index.html.erb:119
-#: app/views/administrator/index.html.erb:119
-msgid "Mail Setup for User 'root'"
-msgstr "Настройка почты для пользователя 'root'"
+msgid "Enter a valid e-mail address."
+msgstr "Введите верный адрес e-mail."
 
-#: app/views/administrator/index.html.erb:121
-#: app/views/administrator/index.html.erb:121
+msgid "Error while saving administrator settings."
+msgstr "Ошибка при сохранении настроек администратора."
+
 msgid "Forward system mail to"
 msgstr "Перенаправлять системные сообщения на"
 
-#: app/views/administrator/index.html.erb:124
-#: app/views/administrator/index.html.erb:124
+msgid "Mail Setup for User 'root'"
+msgstr "Настройка почты для пользователя 'root'"
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr "Задан почтовый алиас, но сервер исходящих сообщений не настроен (%s<i>изменить</i>%s)."
+
+msgid "New Password"
+msgstr "Новый пароль"
+
+msgid "Password Setup for User 'root'"
+msgstr "Настройка пароля для пользователя 'root'"
+
+msgid "Passwords do not match."
+msgstr "Пароли не совпадают."
+
+msgid "Please wait"
+msgstr "Подождите"
+
 msgid "Save Mail Only"
 msgstr "Только сохранить письмо"
 
-#: shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr ""
+msgid "The passwords do not match."
+msgstr "Пароли не совпадают."
+
+#~ msgid "Password Strength:"
+#~ msgstr "Сложность пароля:"
+
+#~ msgid "Weak"
+#~ msgstr "Простой"
+
+#~ msgid "Normal"
+#~ msgstr "Нормальный"
+
+#~ msgid "Medium"
+#~ msgstr "Средний"
+
+#~ msgid "Strong"
+#~ msgstr "Сложный"
+
+#~ msgid "Very Strong"
+#~ msgstr "Очень сложный"
+
+#~ msgid "Manage system administrator"
+#~ msgstr "Управление параметрами системного администратора"
