--- a/plugins/administrator/locale/sk/webyast-root-user.po
+++ b/plugins/administrator/locale/sk/webyast-root-user.po
@@ -6,12 +6,13 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
-"PO-Revision-Date: 2010-04-19 09:16+0100\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2010-06-07 08:13+0100\n"
 "Last-Translator: Rastislav Krupanský <rastislav.krupansky@gmail.com>\n"
 "Language-Team: Slovak <sk-i18n@linux.sk>\n"
+"Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,116 +21,73 @@ msgstr ""
 "X-Poedit-Language: Slovak\n"
 "X-Poedit-Country: SLOVAKIA\n"
 
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-msgid "Enter a valid e-mail address."
-msgstr "Zadajte platnú e-mailovú adresu."
-
-#: app/controllers/administrator_controller.rb:61
-#: app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "Heslá sa nezhodujú."
-
-#: app/controllers/administrator_controller.rb:74
-#: app/controllers/administrator_controller.rb:74
-msgid "Administrator settings have been written."
-msgstr "Administrátorské nastavenia boli zapísané."
-
-#: app/controllers/administrator_controller.rb:84
-#: app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr "Chyba pri ukladaní administrátorských nastavení: %s"
-
-#: app/controllers/administrator_controller.rb:96
-#: app/controllers/administrator_controller.rb:96
-msgid ""
-"Mail alias was set but outgoing mail server is not configured (%s<i>change</"
-"i>%s)."
-msgstr ""
-"Alias e-mailu bol nastavený, ale server odchádzajúcej pošty nie je "
-"nakonfigurovaný (%s<i>zmeniť</i>%s)."
-
-#: app/views/administrator/index.html.erb:22
-#: app/views/administrator/index.html.erb:22 shortcuts.yml:6
-msgid "Administrator Settings"
-msgstr "Administrátorské nastavenia"
-
-#: app/views/administrator/index.html.erb:64
-#: app/views/administrator/index.html.erb:64
-msgid "The passwords do not match."
-msgstr "Heslá sa nezhodujú."
-
-#: app/views/administrator/index.html.erb:65
-#: app/views/administrator/index.html.erb:65
 msgid "A password is required."
 msgstr "Musíte zadať heslo."
 
-#: app/views/administrator/index.html.erb:70
-#: app/views/administrator/index.html.erb:70
-msgid "Password Strength:"
-msgstr "Sila hesla"
+msgid "Administrator Settings"
+msgstr "Administrátorské nastavenia"
 
-#: app/views/administrator/index.html.erb:72
-#: app/views/administrator/index.html.erb:72
-msgid "Weak"
-msgstr "Slabé"
+msgid "Administrator settings have been written."
+msgstr "Administrátorské nastavenia boli zapísané."
 
-#: app/views/administrator/index.html.erb:73
-#: app/views/administrator/index.html.erb:73
-msgid "Normal"
-msgstr "Normálne"
-
-#: app/views/administrator/index.html.erb:74
-#: app/views/administrator/index.html.erb:74
-msgid "Medium"
-msgstr "Stredné"
-
-#: app/views/administrator/index.html.erb:75
-#: app/views/administrator/index.html.erb:75
-msgid "Strong"
-msgstr "Silné"
-
-#: app/views/administrator/index.html.erb:76
-#: app/views/administrator/index.html.erb:76
-msgid "Very Strong"
-msgstr "Veľmi silné"
-
-#: app/views/administrator/index.html.erb:104
-#: app/views/administrator/index.html.erb:104
-msgid "Password Setup for User 'root'"
-msgstr "Nastavenie hesla pre používateľa 'root'"
-
-#: app/views/administrator/index.html.erb:105
-#: app/views/administrator/index.html.erb:105
-msgid "New Password"
-msgstr "Nové heslo"
-
-#: app/views/administrator/index.html.erb:110
-#: app/views/administrator/index.html.erb:110
 msgid "Confirm Password"
 msgstr "Potvrdiť heslo"
 
-#: app/views/administrator/index.html.erb:119
-#: app/views/administrator/index.html.erb:119
-msgid "Mail Setup for User 'root'"
-msgstr "Nastavenie e-mailu pre používateľa 'root'"
+msgid "Enter a valid e-mail address."
+msgstr "Zadajte platnú e-mailovú adresu."
 
-#: app/views/administrator/index.html.erb:121
-#: app/views/administrator/index.html.erb:121
+#, fuzzy
+#| msgid "Error while saving administrator settings: %s"
+msgid "Error while saving administrator settings."
+msgstr "Chyba pri ukladaní administrátorských nastavení: %s"
+
 msgid "Forward system mail to"
 msgstr "Odoslať ďalej systémový mail"
 
-#: app/views/administrator/index.html.erb:124
-#: app/views/administrator/index.html.erb:124
+msgid "Mail Setup for User 'root'"
+msgstr "Nastavenie e-mailu pre používateľa 'root'"
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr "Alias e-mailu bol nastavený, ale server odchádzajúcej pošty nie je nakonfigurovaný (%s<i>zmeniť</i>%s)."
+
+msgid "New Password"
+msgstr "Nové heslo"
+
+msgid "Password Setup for User 'root'"
+msgstr "Nastavenie hesla pre používateľa 'root'"
+
+msgid "Passwords do not match."
+msgstr "Heslá sa nezhodujú."
+
+msgid "Please wait"
+msgstr ""
+
 msgid "Save Mail Only"
 msgstr "Uložiť iba e-mail"
 
-#: shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr ""
+msgid "The passwords do not match."
+msgstr "Heslá sa nezhodujú."
+
+#~ msgid "Password Strength:"
+#~ msgstr "Sila hesla"
+
+#~ msgid "Weak"
+#~ msgstr "Slabé"
+
+#~ msgid "Normal"
+#~ msgstr "Normálne"
+
+#~ msgid "Medium"
+#~ msgstr "Stredné"
+
+#~ msgid "Strong"
+#~ msgstr "Silné"
+
+#~ msgid "Very Strong"
+#~ msgstr "Veľmi silné"
+
+#~ msgid "Manage system administrator"
+#~ msgstr "Spravovať administrátora systému"
 
 #~ msgid "Here, configure the settings for system administrator ('root')."
-#~ msgstr ""
-#~ "Tu nakonfigurujete nastavenia pre systémového administrátora ('root')."
+#~ msgstr "Tu nakonfigurujete nastavenia pre systémového administrátora ('root')."
