--- a/plugins/administrator/locale/sr/webyast-root-user.po
+++ b/plugins/administrator/locale/sr/webyast-root-user.po
@@ -6,132 +6,79 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui 1.0.0\n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
+"Project-Id-Version: @PACKAGE@\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
 "PO-Revision-Date: 2005-08-03 21:03+0200\n"
 "Last-Translator: Данило Шеган <danilo@gnome.org>\n"
 "Language-Team: Serbian <novell@prevod.org>\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : (n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : (n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-msgid "Enter a valid e-mail address."
-msgstr ""
-
-#: app/controllers/administrator_controller.rb:61
-#: app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr ""
-
-#: app/controllers/administrator_controller.rb:74
-#: app/controllers/administrator_controller.rb:74
-#, fuzzy
-msgid "Administrator settings have been written."
-msgstr "Инсталација — безбедна подешавања"
-
-#: app/controllers/administrator_controller.rb:84
-#: app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr ""
-
-#: app/controllers/administrator_controller.rb:96
-#: app/controllers/administrator_controller.rb:96
-msgid ""
-"Mail alias was set but outgoing mail server is not configured (%s<i>change</"
-"i>%s)."
-msgstr ""
-
-#: app/views/administrator/index.html.erb:22
-#: app/views/administrator/index.html.erb:22 shortcuts.yml:6
-#, fuzzy
-msgid "Administrator Settings"
-msgstr "Инсталација — безбедна подешавања"
-
-#: app/views/administrator/index.html.erb:64
-#: app/views/administrator/index.html.erb:64
-msgid "The passwords do not match."
-msgstr ""
-
-#: app/views/administrator/index.html.erb:65
-#: app/views/administrator/index.html.erb:65
 msgid "A password is required."
 msgstr ""
 
-# password dialog title
-#: app/views/administrator/index.html.erb:70
-#: app/views/administrator/index.html.erb:70
 #, fuzzy
-msgid "Password Strength:"
-msgstr "Лозинка:"
+#| msgid "Installation--Safe Settings"
+msgid "Administrator Settings"
+msgstr "Инсталација — безбедна подешавања"
 
-#: app/views/administrator/index.html.erb:72
-#: app/views/administrator/index.html.erb:72
-msgid "Weak"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:73
-#: app/views/administrator/index.html.erb:73
-msgid "Normal"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:74
-#: app/views/administrator/index.html.erb:74
-msgid "Medium"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:75
-#: app/views/administrator/index.html.erb:75
-msgid "Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:76
-#: app/views/administrator/index.html.erb:76
-msgid "Very Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:104
-#: app/views/administrator/index.html.erb:104
-msgid "Password Setup for User 'root'"
-msgstr ""
+#, fuzzy
+#| msgid "Installation--Safe Settings"
+msgid "Administrator settings have been written."
+msgstr "Инсталација — безбедна подешавања"
 
 # password dialog title
-#: app/views/administrator/index.html.erb:105
-#: app/views/administrator/index.html.erb:105
 #, fuzzy
-msgid "New Password"
-msgstr "Лозинка"
-
-# password dialog title
-#: app/views/administrator/index.html.erb:110
-#: app/views/administrator/index.html.erb:110
-#, fuzzy
+#| msgid "Password"
 msgid "Confirm Password"
 msgstr "Лозинка"
 
-#: app/views/administrator/index.html.erb:119
-#: app/views/administrator/index.html.erb:119
-msgid "Mail Setup for User 'root'"
+msgid "Enter a valid e-mail address."
 msgstr ""
 
-#: app/views/administrator/index.html.erb:121
-#: app/views/administrator/index.html.erb:121
+#, fuzzy
+#| msgid "Installation--Safe Settings"
+msgid "Error while saving administrator settings."
+msgstr "Инсталација — безбедна подешавања"
+
 msgid "Forward system mail to"
 msgstr ""
 
-#: app/views/administrator/index.html.erb:124
-#: app/views/administrator/index.html.erb:124
+msgid "Mail Setup for User 'root'"
+msgstr ""
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr ""
+
+# password dialog title
+#, fuzzy
+#| msgid "Password"
+msgid "New Password"
+msgstr "Лозинка"
+
+msgid "Password Setup for User 'root'"
+msgstr ""
+
+msgid "Passwords do not match."
+msgstr ""
+
+msgid "Please wait"
+msgstr ""
+
 msgid "Save Mail Only"
 msgstr ""
 
-#: shortcuts.yml:7
-msgid "Manage system administrator"
+msgid "The passwords do not match."
 msgstr ""
+
+# password dialog title
+#, fuzzy
+#~| msgid "Password:"
+#~ msgid "Password Strength:"
+#~ msgstr "Лозинка:"
 
 # password dialog title
 #, fuzzy
