--- a/plugins/administrator/locale/zh_CN/webyast-root-user.po
+++ b/plugins/administrator/locale/zh_CN/webyast-root-user.po
@@ -1,104 +1,100 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# @TITLE@
+# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
 #
+# This file is distributed under the same license as @PACKAGE@ package. FIRST
+#
+# hillwood <hillwoodroc@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:33\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: @PACKAGE@\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-07-05 16:37+0800\n"
+"Last-Translator: Marguerite Su\n"
+"Language-Team: Chinese Simplified <kde-i18n-doc@kde.org>\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Lokalize 1.4\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
-#: app/controllers/administrator_controller.rb:53 app/views/administrator/index.html.erb:56
-#: ./app/controllers/administrator_controller.rb:53 ./app/views/administrator/index.html.erb:56
-msgid "Enter a valid e-mail address."
-msgstr "请输入有效的电子邮件地址。"
+msgid "A password is required."
+msgstr "密码是必须的。"
 
-#: app/controllers/administrator_controller.rb:61 ./app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "口令不匹配。"
-
-#: app/controllers/administrator_controller.rb:74 ./app/controllers/administrator_controller.rb:74
-msgid "Administrator settings have been written."
-msgstr "管理员设置已写入。"
-
-#: app/controllers/administrator_controller.rb:84 ./app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr "保存管理员设置时出错：%s"
-
-#: app/controllers/administrator_controller.rb:96 ./app/controllers/administrator_controller.rb:96
-msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
-msgstr "设置了邮件别名，但未配置出局邮件服务器 (%s<i>change</i>%s)。"
-
-#: app/views/administrator/index.html.erb:22 ./app/views/administrator/index.html.erb:22 ./shortcuts.yml:6
 msgid "Administrator Settings"
 msgstr "管理员设置"
 
-#: app/views/administrator/index.html.erb:63 ./app/views/administrator/index.html.erb:63
-msgid "Please wait"
-msgstr "请稍候"
+msgid "Administrator settings have been written."
+msgstr "管理员设置已写入。"
 
-#: app/views/administrator/index.html.erb:71 ./app/views/administrator/index.html.erb:71
-msgid "The passwords do not match."
-msgstr "密码不匹配。"
-
-#: app/views/administrator/index.html.erb:72 ./app/views/administrator/index.html.erb:72
-msgid "A password is required."
-msgstr "需要密码。"
-
-#: app/views/administrator/index.html.erb:77 ./app/views/administrator/index.html.erb:77
-msgid "Password Strength:"
-msgstr "密码强度："
-
-#: app/views/administrator/index.html.erb:79 ./app/views/administrator/index.html.erb:79
-msgid "Weak"
-msgstr "弱"
-
-#: app/views/administrator/index.html.erb:80 ./app/views/administrator/index.html.erb:80
-msgid "Normal"
-msgstr "常规"
-
-#: app/views/administrator/index.html.erb:81 ./app/views/administrator/index.html.erb:81
-msgid "Medium"
-msgstr "媒体"
-
-#: app/views/administrator/index.html.erb:82 ./app/views/administrator/index.html.erb:82
-msgid "Strong"
-msgstr "强"
-
-#: app/views/administrator/index.html.erb:83 ./app/views/administrator/index.html.erb:83
-msgid "Very Strong"
-msgstr "非常强"
-
-#: app/views/administrator/index.html.erb:113 ./app/views/administrator/index.html.erb:113
-msgid "Password Setup for User 'root'"
-msgstr "用户“root”的密码设置"
-
-#: app/views/administrator/index.html.erb:114 ./app/views/administrator/index.html.erb:114
-msgid "New Password"
-msgstr "新密码"
-
-#: app/views/administrator/index.html.erb:118 ./app/views/administrator/index.html.erb:118
 msgid "Confirm Password"
 msgstr "确认密码"
 
-#: app/views/administrator/index.html.erb:127 ./app/views/administrator/index.html.erb:127
-msgid "Mail Setup for User 'root'"
-msgstr "用户“root”的邮件设置"
+msgid "Enter a valid e-mail address."
+msgstr "输入一个有效的电子邮件地址。"
 
-#: app/views/administrator/index.html.erb:129 ./app/views/administrator/index.html.erb:129
+msgid "Error while saving administrator settings."
+msgstr "保存管理员设置出错。"
+
 msgid "Forward system mail to"
-msgstr "将系统邮件转发至"
+msgstr "转发系统邮件到"
 
-#: app/views/administrator/index.html.erb:132 ./app/views/administrator/index.html.erb:132
+msgid "Mail Setup for User 'root'"
+msgstr "为 “root” 设置邮件"
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr "设置邮件别名，但没有设置发送邮件服务器 (%s<i>更改</i>%s)。"
+
+msgid "New Password"
+msgstr "新密码"
+
+msgid "Password Setup for User 'root'"
+msgstr "为 “root” 设置密码"
+
+msgid "Passwords do not match."
+msgstr "密码不匹配。"
+
+msgid "Please wait"
+msgstr "请稍候"
+
 msgid "Save Mail Only"
 msgstr "仅保存邮件"
 
-#: ./shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr "管理系统管理员"
+msgid "The passwords do not match."
+msgstr "密码不匹配。"
 
+#~ msgid "Password Strength:"
+#~ msgstr "密码强度："
+
+#~ msgid "Weak"
+#~ msgstr "弱"
+
+#~ msgid "Normal"
+#~ msgstr "一般"
+
+#~ msgid "Medium"
+#~ msgstr "中等"
+
+#~ msgid "Strong"
+#~ msgstr "强"
+
+#~ msgid "Very Strong"
+#~ msgstr "变态"
+
+#~ msgid "Manage system administrator"
+#~ msgstr "管理系统管理员"
+
+# password dialog title
+#~ msgid "Password"
+#~ msgstr "口令"
+
+#, fuzzy
+#~| msgid "_Confirm Password:"
+#~ msgid "Confirm password"
+#~ msgstr "确认口令(_C)："
+
+#, fuzzy
+#~| msgid "Change Password"
+#~ msgid "Save Password"
+#~ msgstr "更改口令"
