--- a/plugins/administrator/locale/zh_TW/webyast-root-user.po
+++ b/plugins/administrator/locale/zh_TW/webyast-root-user.po
@@ -1,104 +1,106 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# translation of yast_webclient_administrator.po to Chinese Traditional
+# @TITLE@
+# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
 #
+# This file is distributed under the same license as @PACKAGE@ package. FIRST
+#
+# swyear <swyear@gmail.com>, 2009, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:34\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: yast_webclient_administrator\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2011-10-11 23:35+0800\n"
+"Last-Translator: \n"
+"Language-Team: Chinese Traditional <zh@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 1.2\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: app/controllers/administrator_controller.rb:53 app/views/administrator/index.html.erb:56
-#: ./app/controllers/administrator_controller.rb:53 ./app/views/administrator/index.html.erb:56
-msgid "Enter a valid e-mail address."
-msgstr "輸入有效的電子郵件地址。"
+msgid "A password is required."
+msgstr "需要有密碼。"
 
-#: app/controllers/administrator_controller.rb:61 ./app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "密碼不符合。"
-
-#: app/controllers/administrator_controller.rb:74 ./app/controllers/administrator_controller.rb:74
-msgid "Administrator settings have been written."
-msgstr "已經寫入管理員設定。"
-
-#: app/controllers/administrator_controller.rb:84 ./app/controllers/administrator_controller.rb:84
-msgid "Error while saving administrator settings: %s"
-msgstr "儲存管理員設定時出錯：%s"
-
-#: app/controllers/administrator_controller.rb:96 ./app/controllers/administrator_controller.rb:96
-msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
-msgstr "設定了郵件別名，但未設定外送郵件伺服器 (%s<i>change</i>%s)。"
-
-#: app/views/administrator/index.html.erb:22 ./app/views/administrator/index.html.erb:22 ./shortcuts.yml:6
 msgid "Administrator Settings"
 msgstr "管理員設定"
 
-#: app/views/administrator/index.html.erb:63 ./app/views/administrator/index.html.erb:63
-msgid "Please wait"
-msgstr "請稍候"
+msgid "Administrator settings have been written."
+msgstr "管理員設定已寫入。"
 
-#: app/views/administrator/index.html.erb:71 ./app/views/administrator/index.html.erb:71
-msgid "The passwords do not match."
-msgstr "密碼不符。"
-
-#: app/views/administrator/index.html.erb:72 ./app/views/administrator/index.html.erb:72
-msgid "A password is required."
-msgstr "需要密碼。"
-
-#: app/views/administrator/index.html.erb:77 ./app/views/administrator/index.html.erb:77
-msgid "Password Strength:"
-msgstr "密碼強度︰"
-
-#: app/views/administrator/index.html.erb:79 ./app/views/administrator/index.html.erb:79
-msgid "Weak"
-msgstr "弱"
-
-#: app/views/administrator/index.html.erb:80 ./app/views/administrator/index.html.erb:80
-msgid "Normal"
-msgstr "一般"
-
-#: app/views/administrator/index.html.erb:81 ./app/views/administrator/index.html.erb:81
-msgid "Medium"
-msgstr "中"
-
-#: app/views/administrator/index.html.erb:82 ./app/views/administrator/index.html.erb:82
-msgid "Strong"
-msgstr "嚴密"
-
-#: app/views/administrator/index.html.erb:83 ./app/views/administrator/index.html.erb:83
-msgid "Very Strong"
-msgstr "非常嚴密"
-
-#: app/views/administrator/index.html.erb:113 ./app/views/administrator/index.html.erb:113
-msgid "Password Setup for User 'root'"
-msgstr "root 使用者的密碼設定"
-
-#: app/views/administrator/index.html.erb:114 ./app/views/administrator/index.html.erb:114
-msgid "New Password"
-msgstr "新密碼"
-
-#: app/views/administrator/index.html.erb:118 ./app/views/administrator/index.html.erb:118
 msgid "Confirm Password"
 msgstr "確認密碼"
 
-#: app/views/administrator/index.html.erb:127 ./app/views/administrator/index.html.erb:127
-msgid "Mail Setup for User 'root'"
-msgstr "root 使用者的郵件設定"
+msgid "Enter a valid e-mail address."
+msgstr "輸入適用的 e-mail 位址。"
 
-#: app/views/administrator/index.html.erb:129 ./app/views/administrator/index.html.erb:129
+#, fuzzy
+#| msgid "Error while saving administrator settings: %s"
+msgid "Error while saving administrator settings."
+msgstr "儲存管理者設定時發生錯誤： %s"
+
 msgid "Forward system mail to"
 msgstr "轉寄系統郵件至"
 
-#: app/views/administrator/index.html.erb:132 ./app/views/administrator/index.html.erb:132
+msgid "Mail Setup for User 'root'"
+msgstr "使用者 'root' 的郵件設定"
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr "郵件別名已設定但外送郵件伺服器尚未組態 (%s<i>變更</i>%s)。"
+
+msgid "New Password"
+msgstr "新密碼"
+
+msgid "Password Setup for User 'root'"
+msgstr "使用者 'root' 的密碼設定"
+
+msgid "Passwords do not match."
+msgstr "密碼不符合。"
+
+msgid "Please wait"
+msgstr "請稍候"
+
 msgid "Save Mail Only"
 msgstr "僅儲存郵件"
 
-#: ./shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr "管理系統管理員"
+msgid "The passwords do not match."
+msgstr "密碼不符合。"
 
+#~ msgid "Password Strength:"
+#~ msgstr "密碼強度："
+
+#~ msgid "Weak"
+#~ msgstr "弱"
+
+#~ msgid "Normal"
+#~ msgstr "一般"
+
+#~ msgid "Medium"
+#~ msgstr "中等"
+
+#~ msgid "Strong"
+#~ msgstr "強"
+
+#~ msgid "Very Strong"
+#~ msgstr "非常強"
+
+#~ msgid "Manage system administrator"
+#~ msgstr "管理系統管理員"
+
+# password dialog title
+#~ msgid "Password"
+#~ msgstr "密碼"
+
+#, fuzzy
+#~| msgid "Confirm Password"
+#~ msgid "Confirm password"
+#~ msgstr "確認密碼"
+
+#, fuzzy
+#~| msgid "Change Password"
+#~ msgid "Save Password"
+#~ msgstr "變更密碼"
+
+#~ msgid "Invalid session, please login again."
+#~ msgstr "不適用的工作階段，請重新登入。"
