--- a/plugins/administrator/locale/zu/webyast-root-user.po
+++ b/plugins/administrator/locale/zu/webyast-root-user.po
@@ -3,135 +3,100 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-root-user-ui 1.0.0\n"
+"Project-Id-Version: installation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
 "PO-Revision-Date: 2006-11-03 14:26\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Last-Translator: i18n@suse.de\n"
+"Language-Team: i18n@suse.de\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
-#: app/controllers/administrator_controller.rb:53
-#: app/views/administrator/index.html.erb:56
 #, fuzzy
-msgid "Enter a valid e-mail address."
-msgstr "`i-%s' ayilona ikheli elifanele le-ip."
-
-#: app/controllers/administrator_controller.rb:61
-#: app/controllers/administrator_controller.rb:61
-msgid "Passwords do not match."
-msgstr "Amaphasiwedi awahambelani."
-
-#: app/controllers/administrator_controller.rb:74
-#: app/controllers/administrator_controller.rb:74
-#, fuzzy
-msgid "Administrator settings have been written."
-msgstr "Amasethingi Emonitha"
-
-#: app/controllers/administrator_controller.rb:84
-#: app/controllers/administrator_controller.rb:84
-#, fuzzy
-msgid "Error while saving administrator settings: %s"
-msgstr "Kwenzeke iphutha lapho ivala ifayela yethunzi endala: %m"
-
-#: app/controllers/administrator_controller.rb:96
-#: app/controllers/administrator_controller.rb:96
-msgid ""
-"Mail alias was set but outgoing mail server is not configured (%s<i>change</"
-"i>%s)."
-msgstr ""
-
-#: app/views/administrator/index.html.erb:22
-#: app/views/administrator/index.html.erb:22 shortcuts.yml:6
-#, fuzzy
-msgid "Administrator Settings"
-msgstr "Amasethingi Emonitha"
-
-#: app/views/administrator/index.html.erb:64
-#: app/views/administrator/index.html.erb:64
-#, fuzzy
-msgid "The passwords do not match."
-msgstr "Amaphasiwedi awahambelani."
-
-#: app/views/administrator/index.html.erb:65
-#: app/views/administrator/index.html.erb:65
-#, fuzzy
+#| msgid "The PKCS12 password is required."
 msgid "A password is required."
 msgstr "Iphasiwedi ye-PKCS12 iyadingeka."
 
-#: app/views/administrator/index.html.erb:70
-#: app/views/administrator/index.html.erb:70
 #, fuzzy
-msgid "Password Strength:"
-msgstr "Amaphasiwedi ayafanelana"
+#| msgid "Monitor Settings"
+msgid "Administrator Settings"
+msgstr "Amasethingi Emonitha"
 
-#: app/views/administrator/index.html.erb:72
-#: app/views/administrator/index.html.erb:72
-msgid "Weak"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:73
-#: app/views/administrator/index.html.erb:73
-msgid "Normal"
-msgstr "Okuvamile"
-
-#: app/views/administrator/index.html.erb:74
-#: app/views/administrator/index.html.erb:74
 #, fuzzy
-msgid "Medium"
-msgstr "Imidiya"
+#| msgid "Monitor Settings"
+msgid "Administrator settings have been written."
+msgstr "Amasethingi Emonitha"
 
-#: app/views/administrator/index.html.erb:75
-#: app/views/administrator/index.html.erb:75
-msgid "Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:76
-#: app/views/administrator/index.html.erb:76
-msgid "Very Strong"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:104
-#: app/views/administrator/index.html.erb:104
-msgid "Password Setup for User 'root'"
-msgstr ""
-
-#: app/views/administrator/index.html.erb:105
-#: app/views/administrator/index.html.erb:105
 #, fuzzy
-msgid "New Password"
-msgstr "_Iphasiwedi Entsha:"
-
-#: app/views/administrator/index.html.erb:110
-#: app/views/administrator/index.html.erb:110
-#, fuzzy
+#| msgid "_Confirm Password:"
 msgid "Confirm Password"
 msgstr "_Qinisekisa Iphasiwedi:"
 
-#: app/views/administrator/index.html.erb:119
-#: app/views/administrator/index.html.erb:119
-msgid "Mail Setup for User 'root'"
-msgstr ""
+#, fuzzy
+#| msgid "`%s' is not a valid ip address."
+msgid "Enter a valid e-mail address."
+msgstr "`i-%s' ayilona ikheli elifanele le-ip."
 
-#: app/views/administrator/index.html.erb:121
-#: app/views/administrator/index.html.erb:121
+#, fuzzy
+#| msgid "Error while closing old shadow file: %m"
+msgid "Error while saving administrator settings."
+msgstr "Kwenzeke iphutha lapho ivala ifayela yethunzi endala: %m"
+
 msgid "Forward system mail to"
 msgstr ""
 
-#: app/views/administrator/index.html.erb:124
-#: app/views/administrator/index.html.erb:124
+msgid "Mail Setup for User 'root'"
+msgstr ""
+
+msgid "Mail alias was set but outgoing mail server is not configured (%s<i>change</i>%s)."
+msgstr ""
+
 #, fuzzy
+#| msgid "_New Password:"
+msgid "New Password"
+msgstr "_Iphasiwedi Entsha:"
+
+msgid "Password Setup for User 'root'"
+msgstr ""
+
+msgid "Passwords do not match."
+msgstr "Amaphasiwedi awahambelani."
+
+#, fuzzy
+#| msgid "Please wait..."
+msgid "Please wait"
+msgstr "Sicela ulinde..."
+
+#, fuzzy
+#| msgid "Save"
 msgid "Save Mail Only"
 msgstr "Gcina"
 
-#: shortcuts.yml:7
-msgid "Manage system administrator"
-msgstr ""
+#, fuzzy
+#| msgid "Passwords do not match."
+msgid "The passwords do not match."
+msgstr "Amaphasiwedi awahambelani."
+
+#, fuzzy
+#~| msgid "Passwords match"
+#~ msgid "Password Strength:"
+#~ msgstr "Amaphasiwedi ayafanelana"
+
+#~ msgid "Normal"
+#~ msgstr "Okuvamile"
+
+#, fuzzy
+#~| msgid "Media"
+#~ msgid "Medium"
+#~ msgstr "Imidiya"
+
+#, fuzzy
+#~| msgid "Standby disabled by administrator."
+#~ msgid "Manage system administrator"
+#~ msgstr "Isimo sokungasebenzi sicishwe ngumqondisi."
 
 # password dialog title
 #~ msgid "Password"
